刑事訴訟法 1945.11.30

--- a/司法-刑事/刑事訴訟法.md
+++ b/司法-刑事/刑事訴訟法.md
@@ -8,7 +8,7 @@
 
 * 5 案件由犯罪地或被告之住所、居所或所在地之法院管轄。在中華民國領域外之中華民國船艦或航空機內犯罪者，船艦本籍地、航空機出發地或犯罪後停泊地之法院，亦有管轄權。
 
-* 6 數同級法院管轄之案件相牽連者，得合併由其中一法院管轄。前項情形，如各案件已繫屬於數法院者，經各該法院之同意，得以裁定將其案件移送於一法院合併審判之，有不同意者，由共同之直接上級法院裁定之。
+* 6 數同級法院管轄之案件相牽連者，得合併由其中一法院管轄。前項情形，如各案件已繫屬於數法院者。經各該法院之同意，得以裁定將其案件移送於一法院合併審判之，有不同意者，由共同之直接上級法院裁定之。不同級法院管轄之案件相牽連者，得合併由其上級法院管轄，已繫屬於下級法院者，其上級法院得以裁定，命其移送上級法院合併審判。但第七條第三款之情形，不在此限。
 
 * 7 有左列情形之一者，為相牽連之案件：一、一人犯數罪者。二、數人共犯一罪或數罪者。三、數人同時在同一處所各別犯罪者。四、犯與本罪有關係之藏匿人犯、湮滅證據、偽證、贓物各罪者。
 
@@ -40,7 +40,7 @@
 
 * 21 推事迴避之聲請，由該推事所屬之法院以合議裁定之，其因不足法定人數不能合議者，由院長裁定之；如並不能由院長裁定者，由直接上級法院裁定之。前項裁定，被聲請迴避之推事不得參與。被聲請迴避之推事，以該聲請為有理由者，毋庸裁定，即應迴避。
 
-* 22 推事被聲請迴避者，除應急速處分外，應即停止訴訟程序。
+* 22 推事被聲請迴避者，除因急速處分或以第十八條第二款為理由者外，應即停止訴訟程序。
 
 * 23 聲請推事迴避經裁定駁回者，得提起抗告。
 
@@ -96,7 +96,7 @@
 
 * 49 辯護人經審判長許可，得於審判期日攜同速記到庭記錄。
 
-* 50 裁判應由推事製作裁判書。但裁定當庭宣示者，得僅命記載於筆錄。
+* 50 裁判應由推事制作裁判書。但不得抗告之裁定，當庭宣示者，得僅命記載於筆錄。
 
 * 51 裁判書除依特別規定外，應記載受裁判人之姓名，性別、年齡、職業、住所或居所；如係判決書，並應記載檢察官或自訴人並代理人、辯護人之姓名。裁判書之原本，應由為裁判之推事簽名；審判長有事故不能簽名者，由資深推事附記其事由；推事有事故者，由審判長附記其事由。
 
@@ -130,9 +130,9 @@
 
 * 66 應於法定期間內為訴訟行為之人，其住居所或事務所不在法院所在地者，計算該期間時，應扣除其在途之期間。前項應扣除之在途期間，由司法行政最高官署定之。
 
-* 67 非因過失、遲誤上訴、抗告或聲請正式審判之期間。或聲請撤銷或變更審判長、受命推事、受託推事裁定，或檢察官命令之期間者，於其原因消滅後五日內，得聲請回復原狀。許用代理人之案件，代理人之過失，視為本人之過失。
+* 67 非因過失、遲誤上訴、抗告、聲請再審或聲請正式審判之期間，或聲請撤銷或變更審判長、受命推事、受託推事裁定，或檢察官命令之期間者，於其原因消滅後五日內，得聲請回復原狀。許用代理人之案件，代理人之過失，視為本人之過失。
 
-* 68 因遲誤上訴或抗告期間，而聲請回復原狀，應以書狀向原審法院為之。其遲誤聲請正式審判或聲請撤銷變更審判長、受命推事、受託推事裁定或檢察官命令之期間者，向管轄該聲請之法院為之。非因過失遲誤期間之原因及其消滅時期，應於書狀內釋明之。聲請回復原狀，應同時補行期間內應為之訴訟行為。
+* 68 因遲誤上訴或抗告或聲請再審期間，而聲請回復原狀，應以書狀，向原審法院為之，其遲誤聲請正式審判或聲請撤銷、變更審判長、受命推事、受託推事裁定或檢察官命令之期間者，向管轄該聲請之法院為之。非因過失遲誤期間之原因及其消滅時期，應於書狀內釋明之。聲請回復原狀，應同時補行期間內應為之訴訟行為。
 
 * 69 回復原狀之聲請，由受聲請之法院與補行之訴訟行為合併裁判之；如原審法院認其聲請應行許可者，應繕具意見書，將該上訴或抗告案件送由上級法院合併裁判。受聲請之法院於裁判回復原狀之聲請前，得停止原裁判之執行。
 
@@ -212,9 +212,9 @@
 
 * 107 羈押於其原因消滅時，應即撤銷，將被告釋放。
 
-* 108 羈押被告，偵查中不得逾二月，審判中不得逾三月。但有繼續羈押之必要者，得於期間未滿前，由法院裁定延長之，在偵查中延長羈押期間。應由檢察官聲請所屬法院裁定。延長羈押期間，每次不得逾二月，偵查中以一次為限。如所犯最重本刑為三年以下有期徒刑以下之刑者，審判中以三次為限。羈押期間已滿，未經起訴或裁判者，視為撤銷羈押。
+* 108 羈押被告，偵查中不得逾二月，審判中不得逾三月。但有繼續羈押之必要者，得於期間未滿前，由法院裁定延長之，在偵查中延長羈押期間，應由檢察官聲請所屬法院裁定。延長羈押期間，每次不得逾二月，偵查中以一次為限，如所犯最重本刑為三年以下有期徒刑以下之刑者，審判中以三次為限。羈押期間已滿，未經起訴或裁判者，視為撤銷羈押。但得命具保責付或限制住居。
 
-* 109 案件經上訴者，被告羈押期間，如已逾原審判決之刑期，除檢察官為被告之不利益而上訴外，應即撤銷羈押，將被告釋放。
+* 109 案件經上訴者，被告羈押期間。如已逾原審判決之刑期，除檢察官為被告之不利益而上訴外，應即撤銷羈押，將被告釋放。但得命具保責付或限制住居。
 
 * 110 被告及得為其輔佐人之人或辯護人，得隨時具保、聲請停止羈押。
 
@@ -224,7 +224,7 @@
 
 * 113 許可停止羈押之聲請者，應於接受保證書或保證金後，停止羈押，將被告釋放。
 
-* 114 羈押之被告有左列情形之一者，如經具保聲請停止羈押，不得駁回。一、所犯最重本刑為六月以下有期徒刑、拘役或專科罰金之罪者。二、懷胎七月以上或生產後一月未滿者。三、現罹疾病，恐因羈押而不能治療者。
+* 114 羈押之被告，有左列情形之一者，如經具保聲請停止羈押，不得駁回。一、所犯最重本刑為一年以下有期徒刑、拘役或專科罰金之罪者。二、懷胎七月以上，或生產後一月未滿者。三、現罹疾病，非保外治療，顯難痊癒者。
 
 * 115 羈押之被告，得不命具保而責付於得為其輔佐人之人或該管區域內其他適當之人，停止羈押。受責付者，應出具證書，載明如經傳喚應令被告隨時到場。
 
@@ -236,9 +236,9 @@
 
 * 119 撤銷羈押或再執行羈押或因裁判而致羈押之效力消滅者，免除具保之責任。具保證書或繳納保證金之第三人，將被告預備逃匿情形，於得以防止之際報告法院、檢察官或司法警察官而聲請退保者，得准其退保。免除具保之責任或經退保者，應將保證書註銷，或將未沒入之保證金發還。前三項規定，於受責付者準用之。
 
-* 120 被告經訊問後，除因逃匿而拘提或逮捕到場者外，雖有第一百零一條情形，亦得不命羈押，逕命具保或責付。
+* 120 被告經訊問後，雖有第七十六條各款所定情形之一，而無羈押之必要者，得逕命具保責付或限制住居；其有第一百十四條各款所定情形之一者，非有不能具保責付或限制住居之情形，不得羈押。
 
-* 121 第一百零七條之撤銷羈押，第一百一十條、第一百十五條及第一百十六條之停止羈押，第一百十七條之再執行羈押，第一百十八條之沒入保證金，第一百十九條第二項之退保及前條之命具保或責付，以法院之裁定或檢察官命令行之。案件在第二審上訴期間內或上訴中，而卷宗及證物尚在第一審法院者，前項處分應由第一審法院裁定之。在第三審上訴期間內或上訴中者，由第二審法院裁定之。
+* 121 第一百零七條之撤銷羈押，第一百零八條第三項、第一百零九條之命具保責付或限制住居。第一百十條、第一百十五條及第一百十六條之停止羈押，第一百十七條之再執行羈押，第一百十八條之沒入保證金，第一百十九條第二項之退保及前條之命具保責付或限制住居，以法院之裁定或檢察官命令行之。案件在第二審上訴期間內或上訴中，而卷宗及證物尚在第一審法院者，前項處分，應由第一審法院裁定之，在第三審上訴期間內或上訴中者，由第二審法院裁定之。
 
 * 122 對於被告之身體、物件及住宅或其他處所，於必要時得搜索之。對於第三人之身體、物件及住宅或其他處所，以有相當理由可信為被告或應扣押之物存在時為限，得搜索之。
 
@@ -342,7 +342,7 @@
 
 * 172 訊問證人，應先調查其人有無錯誤及與被告或自訴人有無第一百六十七條第一項之關係。證人與被告或自訴人有第一百六十七條第一項之關係者，應告以得拒絕證言。
 
-* 173 證人應命具結，但有左列情形之一者，不得令其具結。一、未滿十六歲者。二、因精神障礙不解具結之意義及效果者。三、與本案有共犯或有藏匿犯人及湮滅證據、偽證、贓物各罪之關係或嫌疑者。四、有第一百六十七條第一項或第一百六十八條情形，而不拒絕證言者。五、為被告或自訴人之受僱人或同居人者。於偵查中訊問證人，得不令其具結。
+* 173 證人應命具結，但有左列情形之一者，不得令其具結。一 未滿十六歲者。二 因精神障礙，不解具結之意義及效果者。三 與本案有共犯或有藏匿犯人及湮滅證據、偽證、贓物各罪之關係或嫌疑者。四 有第一百六十七條第一項或第一百六十八條情形，而不拒絕證言者。五 為被告或自訴人之受僱人或同居人者。於偵查中訊問證人，得不令其具結。
 
 * 174 證人具結前，應告以具結之義務及偽證之處罰。對於不令具結之證人，應告以當據實陳述，不得匿、飾、增、減。
 
@@ -410,7 +410,7 @@
 
 * 206 裁判制作裁判書者，除有特別規定外，應以正本送達於當事人或其他受裁判之人。前項送達，自接受裁判原本之日起，至遲不得逾七日。
 
-* 207 檢察官因告訴、告發、自首或其他情事知有犯罪嫌疑者，應即偵查犯人及證據。
+* 207 檢察官因告訴、告發、自首或其他情事，知有犯罪嫌疑者，應即偵查犯人及證據。實施偵查，非有必要，不得先行傳訊被告。
 
 * 208 左列各員於其管轄區域內為司法警察官，有協助檢察官偵查犯罪之職權。一、縣長、市長。二、警察廳長、警務處長或公安局長。三、憲兵隊長官。前項司法警察官應將偵查之結果，移送該管檢察官，如接受被拘提或逮捕之犯罪嫌疑人認其有羈押之必要時，應於二十四小時內移送該管檢察官。但檢察官命其移送者，應即時移送。
 
@@ -430,7 +430,7 @@
 
 * 216 告訴乃論之罪，告訴應自得為告訴之人知悉犯人之時起，六個月內為之。得為告訴之人有數人，一人遲誤期間者，效力不及於他人。
 
-* 217 告訴乃論之罪，告訴人於第一審辯論終結前，得撤回其告訴。但本刑為七年以上有期徒刑以上之刑者，不得撤回。撤回告訴之人，不得再行告訴。
+* 217 告訴乃論之罪，告訴人於第一審辯論終結前，得撤回其告訴。撤回告訴之人，不得再行告訴。
 
 * 218 告訴乃論之罪，對於共犯之一人告訴或撤回告訴者，其效力及於其他共犯。但刑法第二百三十九條之罪，對於配偶撤回告訴者，其效力不及於相姦人。
 
@@ -438,7 +438,7 @@
 
 * 220 公務員因執行職務，知有犯罪嫌疑者，應為告發。
 
-* 221 告訴、告發應以書狀或言詞向檢察官或司法警察官為之，其以言詞為之者，應制作筆錄。第四十一條第二項至第四項及第四十三條之規定，於前項筆錄準用之。
+* 221 告訴、告發應以書狀或言詞向檢察官或司法警察官為之。其以言詞為之者。應製作筆錄。檢察官或司法警察官實施偵查。發見犯罪事實之全部或一部係告訴乃論之罪。而不經告訴者。於被害人或其他得為告訴之人到案陳述時。應訊問其是否告訴。記明筆錄。第四十一條第二項至第四項及第四十三條之規定。於前二項筆錄準用之。
 
 * 222 刑法第一百十六條及第一百十八條請求乃論之罪，外國政府之請求，得經外交部長咨請司法行政最高長官令知該管檢察官。第二百十七條及第二百十八條之規定，於外國政府之請求準用之。
 
@@ -460,19 +460,19 @@
 
 * 231 案件有左列情形之一者，應為不起訴之處分。一、曾經判決確定者。二、時效已完成者。三、曾經大赦者。四、犯罪後之法律已廢止其刑罰者。五、告訴或請求乃論之罪，其告訴或請求已經撤回或已逾告訴期間者。六、被告死亡者。七、法院對於被告無審判權者。八、行為不罰者。九、法律應免除其刑者。十、犯罪嫌疑不足者。
 
-* 232 檢察官於刑法第六十一條所列各罪之案件，參酌刑法第五十七條所列事項，認為以不起訴為適當者，得為不起訴之處分。
+* 232 檢察官於刑法第六十一條所列各罪之案件，參酌刑法第五十七條所列事項，認為以不起訴為適當者，得為不起訴之處分。檢察官為前項不起訴處分前，並得勘酌情形，經告訴人同意，命被告為左列各款事項。一、向被害人送歉。二、立悔過書。三、向被害人支付相當數額之撫慰金。前項情形，應附記於不起訴處分書內。
 
 * 233 被告犯數罪時，其一罪已受或應受重刑之判決，檢察官認為他罪雖行起訴，於應執行之刑無重大關係者，得為不起訴之處分。
 
 * 234 檢察官依前三條規定或因其他理由為不起訴之處分者，應制作處分書，敘述不起訴之理由。不起訴處分書，應以正本送達於告訴人及被告。前項送達，自書記官接受處分書原本之日起，不得逾五日。
 
-* 235 告訴人接受不起訴處分書後，得於七日內以書狀敘述不服之理由，經由原檢察官向直接上級法院首席檢察官或檢察長聲請再議。
+* 235 告訴人接收不起訴處分書後。得於七日內以書狀敘述不服之理由。經原檢察官向直接上級法院首席檢察官或檢察長聲請再議。但有第二百三十二條第二項之情形者。不得聲請再議。
 
 * 236 再議之聲請，原檢察官認為有理由者，應撤銷其處分，繼續偵查或起訴。願檢察官認聲請為無理由者，應即將該案卷宗及證物送交上級法院首席檢察官或檢察長。聲請已逾前條之期間者，應駁回之。原法院首席檢察官認為必要時，於依第二項之規定送交前，得親自或命令他檢察官再行偵查，分別撤銷或維持原處分，其維持原處分者，應即送交。
 
 * 237 上級法院首席檢察官或檢察長認再議之聲請為無理由者，應駁回之。認為有理由者，應分別為左列處分。一、偵查未完備者，命令原法院檢察官續行偵查。二、偵查已完備者，命令原法院檢察官起訴。
 
-* 238 羈押之被告受不起訴之處分者。視為撤銷羈押。但再議期間內或聲請再議中，得命具保或責付。遇有必要情形。並得命繼續羈押之。為不起訴之處分者，扣押物應即發還。但應沒收或為偵查他罪或他被告之用應留存者，不在此限。
+* 238 羈押之被告受不起訴之處分者，視為撤銷羈押。但再議期間內或聲請再議中，得命具保責付或限制住居，遇有必要情形，並得命繼續羈押之。為不起訴之處分者，扣押物應即發還。但應沒收，或為偵查他罪或他被告之用，應留存者，不在此限。
 
 * 239 不起訴處分已確定者，非有左列情形之一，不得對於同一案件再行起訴。一、發見新事實或新證據者。二、有第四百十三條第一項第一款、第二款、第四款或第五款所定得為再審原因之情形者。
 
@@ -500,7 +500,7 @@
 
 * 251 第一次審判期日之傳票至遲應於三日前送達。但刑法第六十一條所列各罪之案件，不在此限。
 
-* 252 法院為準備審判起見，得於第一次審判期日前訊問被告。檢察官及辯護人得於為前項訊問時在場，除有急迫情形外，法院應將訊問之日、時及處所預行通知之。
+* 252 法院為準備審判起見，得於第一次審判期日前，訊問被告。檢察官及辯護人，得於為前項訊問時在場，除有急迫情形外，法院應將訊問之日、時及處所，預行通知之。起訴或其他訴訟行為，於法律上必備之程式有欠缺，而其情形可補正者，法院應定期間，以裁定命其補正。
 
 * 253 法院得於審判期日前傳喚證人、鑑定人或通譯，及調取或命提出證物。
 
@@ -570,7 +570,7 @@
 
 * 286 審判非一次期日所能終結者，除有特別情形外，應於次日連續開庭。如下次開庭因事故間隔至十五日以上者，應更新審判程式。
 
-* 287 被告心神喪失者，應於其回復以前停止審判。但顯有應諭知無罪、免訴、不受理或免刑判決之情形者，得不待其到庭逕行判決。被告因疾病不能到庭者，應於其能到庭以前停止審判。許用代理人案件委任有代理人者，不適用前二項之規定。
+* 287 被告心神喪失者，應於其回復以前，停止審判。被告因疾病不能到庭者，應於其能到庭以前，停止審判。前二項被告，顯有應諭知無罪或免刑判決之情形者，得不待其到庭，逕行判決。許用代理人案件，委任有代理人者，不適用前三項之規定。
 
 * 288 犯罪是否成立以他罪為斷而他罪已經起訴者，得於其判決確定前停止本罪之審判。
 
@@ -608,19 +608,19 @@
 
 * 305 宣示判決，不以參與審判之推事為限。
 
-* 306 判決得為上訴者，其上訴期間及提出上訴狀之法院，應於宣示時一併告知，並應記載於送達被告之判決正本。
+* 306 判決得為上訴者，其上訴期間及提出上訴狀之法院，應於宣示時，一併告知，並應記載於送達被告之判決正本。前項判決正本，並應送達於告訴人，告訴人於上訴期間內，得向檢察官陳述意見。
 
 * 307 犯刑法偽證及誣告罪章或妨害名譽及信用罪章之罪者，因被害人或其他有告訴權人之聲請，得令將判決書全部或一部登報，其費用由被告負擔。
 
-* 308 羈押之被告經諭知無罪、免訴、不受理、免刑、緩刑、罰金或易以訓誡之判決者，視為撤銷羈押。但上訴期間內或上訴中得命具保或責付，如不能具保或責付而有必要情形者，並得命繼續羈押之。
+* 308 羈押之被告，經諭知無罪、免訴、免刑、緩刑、罰金或易以訓誡或第二百九十五條第三款、第四款不受理之判決者，視為撤銷羈押。但上訴期間內或上訴中，得命具保責付或限制住居，如不能具保責付或限制住居，而有必要情形者，並得繼續羈押之。
 
 * 309 扣押物未經諭知沒收者，應即發還。但上訴期間內或上訴中遇有必要情形，得繼續扣押之。
 
 * 310 扣押之贓物，依第一百四十二條第一項應發還被害人者，應不待其請求即行發還。依第一百四十二條第二項暫行發還之物無他項諭知者，視為已有發還之裁定。
 
-* 311 犯罪之被害人得提起自訴，但以有行為能力者為限。
+* 311 犯罪之被害人得提起自訴，但以有行為能力者為限。犯罪事實之一部提起自訴者，他部雖不得自訴，亦以得提起自訴論。但不得提起自訴部分，係較重之罪，或其第一審屬於高等法院管轄，或第三百十三條之情形者，不在此限。
 
-* 312 提起自訴應向管轄法院提出自訴狀為之。自訴狀應記載左列事項。一、被告之姓名、性別、年齡、職業、住所或居所或其他足資辨別之特徵。二、犯罪事實及證據。自訴狀應按被告之人數提出繕本。
+* 312 提起自訴，應向管轄法院提出自訴狀為之。自訴狀應記載左列事項。一、被告之姓名、性別、年齡、職業住所或居所，或其他足資辨別之特徵。二、犯罪事實及證據。自訴狀應按被告之人數，提出繕本。自訴人不能提出自訴狀者，得以言詞提起自訴。前項情形，自訴人應就第二項各款所列事項，分別陳明，由書記官制作筆錄，如被告不在場者，應將筆錄送達被告。
 
 * 313 對於直系尊親屬或配偶不得提起自訴。
 
@@ -630,9 +630,9 @@
 
 * 316 同一案件經提起自訴者，不得再行告訴或為第二百二十二條之請求。
 
-* 317 告訴或請求乃論之罪，自訴人於第一審辯論終結前得撤回其自訴，但本刑為七年以上有期徒刑以上之刑者，不得撤回。撤回自訴應以書狀為之，但於審判期日或受訊問時，得以言詞為之。書記官應速將撤回自訴之事由通知被告。撤回自訴之人不得再行自訴或告訴或請求。
+* 317 告訴或請求乃論之罪，自訴人於第一審辯論終結前，得撤回其自訴。撤回自訴，應以書狀為之。但於審判期日或受訊問時，得以言詞為之。書記官應速將撤回自訴之事由，通知被告。撤回自訴之人，不得再行自訴或告訴或請求。
 
-* 318 法院或受命推事得於第一次審判期日前訊問自訴人及被告。前項訊問不公開之。
+* 318 法院或受命推事，得於第一次審判期日前，訊問自訴人、被告，及蒐集或調查證據，於發見案係民事或利用自訴程序恫嚇被告者，得曉諭自訴人撤回自訴。前項訊問，不公開之。第一項訊問及調查結果，如認為案件有第二百三十一條至第二百三十三條之情形者，得以裁定，駁回自訴，並準用第二百三十二條第二項、第三項之規定。駁回自訴之裁定已確定者，非有第二百三十九條各款情形之一，不得對於同一案件再行自訴。
 
 * 319 命自訴人到場，應傳喚之。自訴人經合法傳喚無正當之理由不到場者，得拘提之。第七十一條至第七十三條、第七十七條至第八十三條及第八十九條至第九十一條之規定，於自訴人之傳喚及拘提準用之。
 
@@ -642,7 +642,7 @@
 
 * 322 法院應將自訴案件之審判期日通知檢察官。檢察官對於自訴案件，得於審判期日出庭陳述意見。
 
-* 323 自訴人經合法傳喚無正當之理由不到庭或到庭不為陳述者，得不待其陳述而為判決。其未受許可而退庭者，亦同。前項情形法院認為有必要者，得通知檢察官擔當訴訟。
+* 323 告訴或請求乃論之罪，自訴人經合法傳喚，無正當之理由不到庭，或到庭不為陳述者，以撤回自訴論，其非告訴或非請求乃論之罪，得不待其陳述而為判決。前項情形，法院認為有必要者，得通知檢察官擔當訴訟。第三百十七條第三項及第四項之規定，於第一項以撤回自訴論之情形準用之。
 
 * 324 自訴人於辯論終結前死亡或喪失行為能力者，法院應分別情形逕行判決或通知檢察官擔當訴訟。
 
@@ -666,7 +666,7 @@
 
 * 334 自訴之撤回，不影響於反訴。
 
-* 335 自訴程序除本章有特別規定外，準用前章第二節及第三節關於公訴之規定。
+* 335 自訴程序，除本章有特別規定外，準用第二百二十五條、第二百二十八條及前章第二節、第三節關於公訴之規定。
 
 * 336 當事人對於下級法院之判決有不服者，得上訴於上級法院。檢察官為被告之利益，亦得上訴。
 
@@ -720,7 +720,7 @@
 
 * 361 第二審法院認為上訴有理由者，應將原審判決經上訴之部分撤銷，就該案件自為判決。但因原審判決諭知管轄錯誤、免訴、不受理係不當而撤銷之者，得以判決將該案件發回原審法院。第二審法院因原審判決未諭知管轄錯誤係不當而撤銷之者，如第二審法院有第一審管轄權，應為第一審之判決。
 
-* 362 由被告上訴或為被告之利益而上訴者，第二審法院不得諭知較重於原審判決之刑。但因原審判決適用法條不當而撤銷之者，不在此限。
+* 362 由被告上訴或為被告之利益而上訴者，第二審法院不得諭知較重於原審判決之刑。但因原審判決適用法條不當，或量刑顯係失出，而撤銷之者，不在此限。
 
 * 363 被告經合法傳喚無正當之理由不到庭者，得不待其陳述逕行判決。
 
@@ -744,15 +744,15 @@
 
 * 373 原審判決後刑罰有廢止、變更或免除者，得為上訴之理由。
 
-* 374 上訴書狀應敘述上訴之理由，其未敘述者，應於提起上訴後十日內補提理由書於原審法院。第三百四十二條第二項、第三百四十三條及第三百四十四條之規定，於前項理由書準用之。
+* 374 上訴書狀，應敘述上訴之理由，其未敘述者，得於提起上訴後十日內，補提理由書於原審法院，未補提者，毋庸命其補提。第三百四十二條第二項、第三百四十三條及第三百四十四條之規定，於前項理由書準用之。
 
-* 375 他造當事人接受載有上訴理由之上訴書狀或補提理由書之送達後，得於七日內提出答辯書於原審法院。如係檢察官為他造當事人者，應就上訴之理由提出簽辯書。答辯書應提出繕本，由原審法院書記官送達於上訴人。
+* 375 他造當事人接受上訴書狀或補提理由書之送達後，得於七日內，提出答辯書於原審法院。如係檢察官為他造當事人者，應就上訴之理由，提出答辯書。答辯書應提出繕本，由原審法院書記官送達於上訴人。
 
-* 376 原審法院認為上訴違背法律上之程式或上訴權已經喪失或係對於不得向第三審法院上訴之判決而上訴者，應以裁定駁回之。其不依第三百七十四條之規定補提上訴理由書者，亦同。
+* 376 原審法院認為上訴違背法律上之程式，或上訴權已經喪失，或係對於不得向第三審法院上訴之判決而上訴者，應以裁定駁回之。
 
 * 377 除前條情形外，原審法院於接受答辯書或提出答辯書之期間已滿後，應速將該案卷宗及證物，送交第三審法院之檢察官。第三審法院之檢察官接受卷宗及證物後，應於七日內添具意見書送交第三審法院。但於原審法院檢察官提出之上訴書或答辯書外，無他意見者，毋庸添具意見書。無檢察官為當事人之上訴案件，原審法院應將卷宗及證物逕送交第三審法院。
 
-* 378 上訴人及他造當事人，在第三審法院未判決前，得提出迫加理由書、答辯書或意見書於第三審法院。
+* 378 上訴人及他造當事人，在第三審法院未判決前，得提出上訴理由書、答辯書、意見書或追加理由書於第三審法院。
 
 * 379 第三審之審判，除本章有特別規定外，準用第一審審判之規定。
 
@@ -766,17 +766,17 @@
 
 * 384 審判期日被告人或自訴人無代理人、辯護人到庭者，應由檢察官或他造當事人之代理人、辯護人陳述後，即行判決，被告及自訴人均無代理人、辯護人到庭者，得不行辯論。
 
-* 385 第三審法院之調查，以上訴理由所指摘之事項為限。但左列事項得依職權調查之：一、法院之管轄。二、免訴事由之有無。三、受理訴訟之當否。四、對於確定事實援用法令之當否。五、原審判決後刑罰之廢止、變更或免除。
+* 385 第三審法院之調查，以上訴理由所指摘之事項為限。但左列事項，得依職權調查之：一、第三百七十一條各款所列之情形。二、免訴事由之有無。三、對於確定事實援用法令之當否。四、原審判決後，刑法之廢止、變更或免除。五、原審判決後之大赦或被告死亡。
 
-* 386 第三審法院，關於訴訟程序法院管轄、免訴事由及訴訟之受理得調查事實。前項調查，得以受命推事行之並得囑託他法院之推事調查。
+* 386 第三審法院，應以第二審判決所確認之事實為判決基礎，但關於訴訟程序及得依職權調查之事項，得調查事實。前項調查，得以受命推事行之，並得囑託他法院之推事調查。前二項調查之結果，認為起訴程序違背規定者，法院得命其補正，其法院無審判權，而依原審判決後之法令，有審判權者，不以無審判權論。
 
-* 387 第三審法院認為上訴有第三百七十六條之情形者，應以判決駁回之。
+* 387 第三審法院認為上訴有第三百七十六條之情形者，應以判決駁回之，其以逾第三百七十四條第一項所定期間，而於第三審法院未判決前，仍未提出上訴理由書狀者亦同。
 
 * 388 第三審法院認為上訴無理由者，應以判決駁回之。前項情形，得同時諭知緩刑。
 
-* 389 第三審法院認為上訴有理由者，應將原審判決中經上訴之部分撤銷，分別為後四條之判決。
+* 389 第三審法院認為上訴有理由者，應將原審判決中，經上訴之部分撤銷。
 
-* 390 第三審法院因原審判決有左列情形之一而撤銷之者，應就該案件自為判決。但應為後二條之判決者，不在此限。一、雖係違背法令而不影響於事實之確定，可據以為裁判者。二、應諭知免訴或不受理者。三、因判決後刑罰有廢止、變更或免除者。
+* 390 第三審法院因原審判決有左列情形之一，而撤銷之者，應就該案件自為判決。但應為後二條之判決者，不在此限。一、雖係違背法令，而不影響於事實之確定，可據以為裁判者。二、應諭知免訴或不受理者。三、有第三百八十五條第四款或第五款之情形者。
 
 * 391 第三審法院因原審判決諭知管轄錯誤、免訴或不受理係不當而撤銷之者，應以判決將該案件發回原審法院。但有必要時，得逕行發回第一審法院。
 
@@ -796,7 +796,7 @@
 
 * 399 提起抗告應以抗告書狀敘述抗告之理由，提出於原審法院為之。
 
-* 400 原審法院認為抗告違背法律上之程式，或抗告權已經喪失，或係對於不得抗告之裁定抗告者，應以裁定駁回之。原審法院認為抗告有理由者，應更正其裁定，認為全部或一部無理由者，應於接受抗告書狀後三日內添具意見書送交抗告法院。
+* 400 原審法院認為抗告違背法律上之程式，或抗告權已經喪失，或係對於不得抗告之裁定抗告者，應以裁定駁回之。原審法院認為抗告有理由者，應更正其裁定，認為全部或一部無理由者，應於接受抗告書狀後三日內，送交抗告法院，並得添具意見書。
 
 * 401 抗告無停止執行裁判之效力。但原審法院於抗告法院之裁定前，得以裁定停止執行。抗告法院得以裁定停止裁判之執行。
 
@@ -826,7 +826,7 @@
 
 * 414 不得上訴於第三審法院之案件，除前條規定外，其經第二審確定之有罪判決，如就足生影響於判決之重要證據漏未審酌者，亦得為受判決人之利益，聲請再審。
 
-* 415 有罪、無罪、免訴或不受理之判決確定後，有左列情形之一者，為受判決人之不利益，得聲請再審。一、有第四百十三條第一款、第二款、第四款或第五款之情形者。二、受無罪或輕於相當之刑之判決，而於訴訟上或訴訟外自白，其應受有罪或重刑判決之犯罪事實者。三、受免訴或不受理之判決，而於訴訟上或訴訟外自述其並無免訴或不受理之原因者。
+* 415 有罪、無罪、免訴或不受理之判決確定後，有左列情形之一者，為受判決人之不利益，得聲請再審。一、有第四百十三條第一款、第二款、第四款或第五款之情形者。二、受無罪或輕於相當之刑之判決，而於訴訟上或訴訟外自白，或發見確實之新證據，足認其有應受有罪或重刑判決之犯罪事實者。三、受免訴或不受理之判決，而於訴訟上或訴訟外自述，或發見確實之新證據，足認其並無免訴或不受理之原因者。
 
 * 416 聲請再審，於刑罰執行完畢後，或已不受執行時，亦得為之。
 
@@ -876,9 +876,9 @@
 
 * 439 認為非常上訴無理由者，應以判決駁回之。
 
-* 440 認為非常上訴有理由者，應分別為左列之判決。一、原判決違背法令者，將其違背之部分撤銷。但原判決不利於被告者，應就該案件另行判決。二、訴訟程序違背法令者，撤銷其程序。
+* 440 認為非常上訴有理由者，應分別為左列之判決。一、原判決違背法令者，將其違背之部分撤銷。但原判決不利於被告者，應就該案件另行判決。二、訴訟程序違背法令者，撤銷其程序。前項第一款情形，如係誤認為無審判權而不受理，或其他有維持被告審級利益之必要者，得將原判決撤銷，由原審法院依判決前之程序，更為審判。但不得諭知較重於原確定判決之刑。
 
-* 441 非常上訴之判決，除依前條第一款但書規定者外，其效力不及於被告。
+* 441 非常上訴之判決，除依前條第一項第一款但書及第二項規定者外，其效力不及於被告。
 
 * 442 刑法第六十一條所列各罪之案件，第一審法院依被告在偵查中之自白或其他現存之證據，已足認定其犯罪者，得因檢察官之聲請，不經通常審判程序，逕以命令處刑。但有必要時，應於處刑前訊問被告。依前項命令所科之刑，以六月以下有期徒刑、拘役或罰金為限。
 
@@ -986,7 +986,7 @@
 
 * 494 附帶民事訴訟，除本編有特別規定外，準用關於刑事訴訟之規定。但經移送或發回、發交於民事庭後，應適用民事訴訟法。
 
-* 495 民事訴訟法關於左列事項之規定，於附帶民事訴訟準用之：一、當事人能力及訴訟能力。二、共同訴訟。三、訴訟參加。四、訴訟代理人及輔佐人。五、訴訟程序之停止。六、當事人本人之到場。七、和解。八、本於捨棄之判決。九、訴及上訴或抗告之撤回。十、保全程序。
+* 495 民事訴訟法關於左列事項之規定，於附帶民事訴訟準用之：一、當事人能力及訴訟能力。二、共同訴訟。三、訴訟參加。四、訴訟代理人及輔佐人。五、訴訟程序之停止。六、當事人本人之到場。七、和解。八、本於捨棄之判決。九、訴及上訴或抗告之撤回。十、假扣押、假處分及假執行。
 
 * 496 提起附帶民事訴訟，應提出訴狀於法院為之。前項訴狀，準用民事訴訟法之規定。
 
@@ -994,7 +994,7 @@
 
 * 498 刑事訴訟之審判期日，得傳喚附帶民事訴訟關係人。
 
-* 499 原告於審判期日到庭釋明不能提出訴狀之事由者，得以言詞提起附帶民事訴訟。但被告不在場者，不在此限。
+* 499 原告於審判期日到庭時，得以言詞提起附帶民事訴訟。其以言詞起訴者，應陳述訴狀所應表明之事項，記載於筆錄。第四十一條第二項至第四項之規定，於前項筆錄準用之。原告以言詞起訴，而他造不在場者，應將筆錄送達於他造。
 
 * 500 附帶民事訴訟之審理，應於審理刑事訴訟後行之。但審判長如認為適當者，亦得同時調查。
 
@@ -1006,13 +1006,13 @@
 
 * 504 附帶民事訴訟之判決，應以刑事訴訟判決所認定之事實為據。但本於捨棄而為判決者，不在此限。
 
-* 505 附帶民事訴訟應與刑事訴訟同時判決，或於刑事訴訟判決後五日內判決之。
+* 505 附帶民事訴訟應與刑事訴訟同時判決，或於刑事訴訟判決後，十日內判決之。
 
 * 506 法院認為原告之訴不合法或無理由者，應以判決駁回之。認為原告之訴有理由者，應依其關於請求之聲明，為被告敗訴之判決。
 
-* 507 刑事訴訟諭知無罪、免訴或不受理之判決者，應以判決駁回原告之訴。但經原告聲請時，應將附帶民事訴訟移送管轄法院之民事庭。前項判決，非對於刑事訴訟之判決有上訴時，不得上訴。
+* 507 刑事訴訟諭知無罪、免訴或不受理之判決者，應以判決駁回原告之判。但經原告聲請時，應將附帶民事訴訟移送管轄法院之民事庭。前項判決，非對於刑事訴訟之判決有上訴時，不得上訴。第一項但書移送案件，應繳納訴訟費用。自訴案件經裁定駁回自訴者，應以裁定駁回原告之訴，並準用前三項之規定。
 
-* 508 法院認附帶民事訴訟為繁雜，非經長久之時日不能終結其審判者，不問訴訟程度如何，得以裁定移送該法院之民事庭。前項移送案件，免納審判費用。對於第一項裁定不得抗告。
+* 508 法院認附帶民事訴訟確係繁雜，非經長久時日，不能終結其審判者，得以裁定，移送該法院之民事庭。前項移送案件，免納審判費用。對於第一項裁定，不得抗告。
 
 * 509 處刑命令與確定判決有同一之效力後，應以裁定將附帶民事訴訟移送該法院之民事庭。前項移送案件，免納審判費用。對於第一項裁定，不得抗告。
 
@@ -1026,7 +1026,7 @@
 
 * 514 第三審法院認為刑事訴訟之上訴有理由，撤銷原審判決，而將該案件發回或發交原審法院或他法院者，應併就附帶民事訴訟之上訴，為同一之判決。
 
-* 515 第二審或第三審法院如僅應就附帶民事訴訟為審判者，應以裁定將該案件移送該法院之民事庭。對於前項裁定，不得抗告。
+* 515 法院如僅應就附帶民事訴訟為審判者，應以裁定，將該案件移送該法院之民事庭。但附帶民事訴訟之上訴不合法者，不在此限。對於前項裁定，不得抗告。
 
 * 516 對於附帶民事訴訟之判決聲請再審者，應依民事訴訟法向原判決法院之民事庭提起再審之訴。
 
