--- a/司法-民事/票據法.md
+++ b/司法-民事/票據法.md
@@ -1,278 +1,290 @@
-* 1 本法所稱票據，為匯票、本票、及支票。
+* 1 本法所稱票據，為匯票、本票及支票。
 
-* 2 在票據上簽名者，依票上所載文義負責。
+* 2 稱匯票者，謂發票人簽發一定之金額，委託付款人於指定之到期日，無條件支付與受款人或執票人之票據。
 
-* 3 票據上之簽名得以蓋章畫押代之。
+* 3 稱本票者，謂發票人簽發一定之金額，於指定之到期日，由自己無條件支付與受款人或執票人之票據。
 
-* 4 票據上記載金額之文字與號碼不符時，以文字為準。
+* 4 稱支票者，謂發票人簽發一定之金額，委託銀錢業者或信用合作社，於見票時無條件支付與受款人或執票人之票據。
 
-* 5 票據上雖有無行為能力人之簽名，不影響其他簽名者之權利義務。
+* 5 在票據上簽名者，依票上所載文義負責。二人以上共同簽名時，應連帶負責。
 
-* 6 代理人未載明為本人代理之旨而簽名於票據者，應自負票據上之責任。
+* 6 票據上之簽名，得以蓋章或畫押代之。
 
-* 7 無代理權而以代理人名義簽名於票據者，應自負票據上之責任。代理人逾越權限時，就其權限外之部分亦同。
+* 7 票據上記載金額之文字與號碼不符時，以文字為準。
 
-* 8 欠缺本法所規定票據上應記事項之一者，其票據無效。但本法別有規定者，不在此限。
+* 8 票據上雖有無行為能力人之簽名，不影響其他簽名者之權利與義務。
 
-* 9 票據上記載本法所不規定之事項者，不生票據上之效力。
+* 9 代理人未載明為本人代理之旨而簽名於票據者，應自負票據上之責任。
 
-* 10 票據債務人，不得以自己與發票人或執票人之前手間所存抗辯之事由對抗執票人。但執票人取得票據出於惡意或詐欺時，不在此限。
+* 10 無代理權而以代理人名義簽名於票據者，應自負票據上之責任。代理人逾越權限時，就其權限外之部分，亦應自負票據上之責任。
 
-* 11 以惡意或有重大過失取得票據者，不得享有票據上之權利。
+* 11 欠缺本法所規定票據上應記載事項之一者，其票據無效。但本法別有規定者，不在此限。
 
-* 12 票據之偽造或票上簽名之偽造，不影響於真正簽名之效力。
+* 12 票據上記載本法所不規定之事項者，不生票據上之效力。
 
-* 13 票據經變造時簽名在變造前者，依原有文義負責。簽名在變造後者，依變造文義負責。不能辨別前後時，推定簽名在變造前。
+* 13 票據債務人不得以自己與發票人或執票人之前手間所存抗辯之事由對抗執票人。但執票人取得票據出於惡意或詐欺時，不在此限。
 
-* 14 票據上之簽名或記載被塗銷時，非由票據權利人故意為之者，不影響於票據上之效力。
+* 14 以惡意或有重大過失取得票據者，不得享有票據上之權利。
 
-* 15 票據喪失時，執票人應即為止付之通知。
+* 15 票據之偽造或票上簽名之偽造，不影響於真正簽名之效力。
 
-* 16 執票人喪失票據時，得為公示催告之聲請。公示催告程序開始後，聲請人得提供擔保，請求票據金額之支付；不能提供擔保時，得請求將票據金額提存於法院或商會銀行公會或其他得受提存之公共會所。
+* 16 票據經變造時，簽名在變造前者，依原有文義負責。簽名在變造後者，依變造文義負責。不能辨別前後時，推定簽名在變造前。
 
-* 17 為行使或保全票據上權利，對於票據關係人應為之行為，應在票據上指定之處所為之；無指定之處所者，在其營業所為之；無營業所者，在其住所或居所為之。票據關係人之營業所、住所或居所不明時，因作成拒絕證書，得請求公證人、法院商會或其他公共會所調查其人之所在；若仍不明時，得在該公證人事務所、法院商會或其他公共會所作成之。
+* 17 票據上之簽名或記載被塗銷時，非由票據權利人故意為之者，不影響於票據上之效力。
 
-* 18 為行使或保全票據上權利，對於票據關係人應為之行為，應於其營業日營業時間內為之。
+* 18 票據喪失時，執票人應即為止付之通知。
 
-* 19 票據上之權利，對匯票承兌人及本票發票人，自到期日起算；三年間不行使者，因時效而消滅；對支票發票人一年間不行使者，因時效而消滅。匯票、本票之執票人，對前手之追索權，自作成拒絕證書日起算，一年間不行使，因時效而消滅；支票之執票人，對前手之追索權，四個月不行使，因時效而消滅；其免除作成拒絕證書者，匯票、本票自到期日起算；支票自提示日起算。匯票、本票之背書人，對於前手之追索權，自為清償之日或被訴之日起算，六個月間不行使，因時效而消滅；支票之背書人，對前手之追索權，二個月間不行使，因時效而消滅。票據上之債權，雖依本法因時效或手續之欠缺而消滅，執票人對於發票人或承兌人，於其所受利益之限度，得請求償還。
+* 19 執票人喪失票據時，得為公示催告之聲請。公示催告程序開始後，其經到期之票據，聲請人得提供擔保請求票據金額之支付。不能提供擔保時，得請求將票據金額提存於法院、商會、銀行公會或其他得受提存之公共會所。其尚未到期之票據，聲請人得提供擔保，請求給與新票據。
 
-* 20 票據餘白不敷記載時，得黏單延長之。黏單後之第一記載應寫在騎縫上，並加蓋印章。
+* 20 為行使或保全票據上權利，對於票據關係人應為之行為，應在票據上指定之處所為之；無指定之處所者，在其營業所為之；無營業所者，在其住所或居所為之。票據關係人之營業所、住所或居所不明時，因作成拒絕證書，得請求法院公證處、商會或其他公共會所，調查其人之所在；若仍不明時，得在該法院公證處、商會或其他公共會所作成之。
 
-* 21 匯票應記載左列事項，由發票人簽名：一、表明其為匯票之文字。二、一定之金額。三、付款人之姓名或商號。四、受款人之姓名或商號。五、無條件支付之委託。六、發票地及發票年月日。七、付款地。八、到期日。未載到期日者，視為見票即付。未載付款人者，以發票人為付款人。未載受款人者，以執票人為受款人。未載發票地者，以發票人之營業所、住所或居所所在地為發票地。未載付款地者，以付款人之營業所、住所或居所所在地為付款地。
+* 21 為行使或保全票據上權利，對於票據關係人應為之行為，應於其營業日之營業時間內為之；如其無特定營業日或未訂有營業時間者，應於通常營業日之營業時間內為之。
 
-* 22 發票人得以自己或付款人為受款人，並得以自己為付款人。
+* 22 票據上之權利，對匯票承兌人及本票發票人，自到期日起算，三年間不行使者，因時效而消滅。對支票發票人一年間不行使者，因時效而消滅。匯票、本票之執票人，對前手之追索權，自作成拒絕證書日起算，一年間不行使，因時效而消滅。支票之執票人，對前手之追索權，四個月不行使，因時效而消滅。其免除作成拒絕證書者，匯票、本票，自到期日起算。支票自提示日起算。匯票、本票之背書人，對於前手之追索權，自為清償之日或被訴之日起算，六個月間不行使，因時效而消滅。支票之背書人，對前手之追索權，二個月間不行使，因時效而消滅。票據上之債權，雖依本法因時效或手續之欠缺而消滅，執票人對於發票人或承兌人，於其所受利益之限度，得請求償還。
 
-* 23 發票人得於付款人外，記載一人為擔當付款人。發票人亦得於付款人外，記載在付款地之一人為預備付款人。
+* 23 票據餘白不敷記載時，得黏單延長之，黏單後之第一記載，應書於騎縫上，並加蓋印章。
 
-* 24 發票人得記載在付款地之付款處所。
+* 24 匯票應記載左列事項，由發票人簽名：一、表明其為匯票之文字。二、一定之金額。三、付款人之姓名或商號。四、受款人之姓名或商號。五、無條件支付之委託。六、發票地。七、發票年、月、日。八、付款地。九、到期日。未載到期日者，視為見票即付。未載付款人者，以發票人為付款人。未載受款人者，以執票人為受款人。未載發票地者，以發票人之營業所、住所或居所所在地為發票地。未載付款地者，以付款人之營業所、住所或居所所在地為付款地。
 
-* 25 發票人得記載對於票據金額支付利息及其利率。利率未經載明時，定為年利六厘。利息自發票日起算。但有特約者，不在此限。
+* 25 發票人得以自己或付款人為受款人，並得以自己為付款人。
 
-* 26 發票人應照匯票文義擔保承兌及付款，但得依特約免除擔保承兌之責。匯票上有免除擔保付款之記載者，其記載無效。
+* 26 發票人得於付款人外，記載一人為擔當付款人。發票人亦得於付款人外，記載在付款地之一人為預備付款人。
 
-* 27 匯票依背書而轉讓。但發票人有禁止轉讓之記載者，不在此限。背書人於票上記載禁止轉讓者，仍得依背書而轉讓之。但禁止轉讓者，對於禁止後再由背書取得匯票之人，不負責任。
+* 27 發票人得記載在付款地之付款處所。
 
-* 28 背書由背書人在匯票之背面或其黏單上為之。記載被背書人之姓名或商號及背書之年月日由背書人簽名。背書人得不記載被背書人，僅簽名於匯票而為空白背書。
+* 28 發票人得記載對於票據金額支付利息及其利率。利率未經載明時，定為年利六釐。利息自發票日起算。但有特約者，不在此限。
 
-* 29 空白背書之匯票，得依匯票之交付轉讓之。前項匯票，亦得以空白背書或記載被背書人姓名或商號轉讓之。
+* 29 發票人應照匯票文義，擔保，承兌及付款。但得依特約免除擔保承兌之責。匯票上有免除擔保付款之記載者其記載無效。
 
-* 30 空白匯票或最後之背書為空白之匯票，其執票人得於空白內記載自己或他人為被背書人再為轉讓。
+* 30 匯票依背書而轉讓，但發票人有禁止轉讓之記載者，不在此限。背書人於票上記載禁止轉讓者，仍得依背書而轉讓之。但禁止轉讓者，對於禁止後再由背書取得匯票之人，不負責任。
 
-* 31 匯票得依背書讓與發票人、承兌人、付款人或其他票據債務人。前項受讓人於票據未到期前得更以背書轉讓之。
+* 31 背書由背書人在匯票之背面或其黏單上為之，記載被背書人之姓名或商號及背書之年、月、日，由背書人簽名。背書人得不記載被背書人及年、月、日，僅簽名於匯票，而為空白背書。
 
-* 32 背書人得記載在付款地之一人為預備付款人。
+* 32 空白背書之匯票，得依匯票之交付轉讓之。前項匯票，亦得以空白背書或記載被背書人姓名或商號轉讓之。
 
-* 33 就匯票金額之一部分所為之背書，或將匯票金額分別轉讓於數人之背書，不生效力，背書附記條件者，其條件視為無記載。
+* 33 空白背書匯票，或最後之背書為空白之匯票，其執票人得於空白內記載自己或他人為被背書人，再為轉讓。
 
-* 34 執票人應以背書之連續，證明其權利，但背書中有空白背書時，其次之背書人，視為前空白背書之被背書人。塗銷之背書，關於背書之連續，視為無記載。
+* 34 匯票得依背書讓與發票人、承兌人、付款人或其他票據債務人。前項受讓人，於票據未到期前，得更以背書轉讓之。
 
-* 35 執票人故意塗銷背書者，其被塗銷之背書人及其被塗銷背書人名次之後，而於未塗銷以前為背書者，均免其責任。
+* 35 背書人得記載在付款地之一人為預備付款人。
 
-* 36 第二十六條之規定，於背書人準用之。
+* 36 就匯票金額之一部分所為之背書，或將匯票金額分別轉讓於數人之背書，不生效力。背書附記條件者，其條件視為無記載。
 
-* 37 執票人以委任取款之目的，而為背書時，應於匯票上記載之。前項被背書人，得行使匯票上一切之權利，並得以同一之目的，更為背書。其次之被背書人，所得行使之權利，與第一被背書人同。票據債務人對於受任人所得提出之抗辯，以得對抗委任人者為限。
+* 37 執票人應以背書之連續，證明其權利。但背書中有空白背書時，其次之背書人，視為前空白背書之被背書人。塗銷之背書，關於背書之連續，視為無記載。
 
-* 38 到期日後之背書，與到期日前之背書，有同一效力，但作成拒絕付款證書後，或作成拒絕證書期限經過後所為之背書，僅有通常債權轉讓之效力，背書人不負票據上之責任。
+* 38 執票人故意塗銷背書者，其被塗銷之背書人，及其被塗銷背書人名次之後而於未塗銷以前為背書者，均免其責任。
 
-* 39 執票人於匯票到期日前，得向付款人為承兌之提示。
+* 39 第二十九條之規定，於背書人準用之。
 
-* 40 承兌應在匯票正面記載承兌字樣，由付款人簽名。付款人僅在票面簽名者，視為承兌。
+* 40 執票人以委任取款之目的而為背書時，應於匯票上記載之。前項被背書人，得行使匯票上一切權利，並得以同一目的更為背書。其次之被背書人所得行使之權利，與第一被背書人同。票據債務人，對於受任人所得提出之抗辯，以得對抗委任人者為限。
 
-* 41 除見票即付之匯票外，發票人或背書人得在匯票上為應請求承兌之記載，並得指定其期限。發票人得為於一定日期前，禁止請求承兌之記載。背書人所定應請求承兌之期限，不得在發票人所定禁止期限之內。
+* 41 到期日後之背書，與到期目前之背書，有同一效力。但作成拒絕付款證書後，或作拒絕付款證書期限經過後，所為之背書，僅有通常債權轉讓之效力，背書人不負票據上之責任。
 
-* 42 見票後定期付款之匯票，應自發票日起六個月內為承兌之提示。前項期限，發票人得以特約縮短或延長之。但延長之期限不得逾六個月。
+* 42 執票人於匯票到期日前，得向付款人為承兌之提示。
 
-* 43 見票後定期付款之匯票，或指定請求承兌期限之匯票，應由付款人在承兌時記載其日期。承兌日期未經記載時，以前條所許或發票人指定之承兌期限之末日為承兌日。
+* 43 承兌應在匯票正面記載承兌字樣，由付款人簽名。付款人僅在票面簽名者，視為承兌。
 
-* 44 付款人承兌時，經執票人之同意，得就匯票金額之一部分為之。但執票人應將事由通知其前手。承兌附條件者，視為承兌之拒絕。但承兌人仍依所附條件負其責任。執票人於獲一部分承兌後，對於未獲承兌之一部分，應作成拒絕證書證明之。
+* 44 除見票即付之匯票外，發票人或背書人，得在匯票上為應請求承兌之記載，並得指定其期限。發票人得為於一定日期前，禁止請求承兌之記載。背書人所定應請求承兌之期限，不得在發票人所定禁止期限之內。
 
-* 45 付款人於執票人請求承兌時，得請其延期為之，但以三日為限。
+* 45 見票後定期付款之匯票，應自發票日起六個月內為承兌之提示。前項期限，發票人得以特約縮短或延長之。但延長之期限，不得逾六個月。
 
-* 46 匯票上未經發票人指定擔當付款人者，付款人得於承兌時記載之。
+* 46 見票後定期付款之匯票，或指定請求承兌期限之匯票，應由付款人在承兌時，記載其日期。承兌日期未經記載時，以前條所許或發票人指定之承兌期限之末日，為承兌日。
 
-* 47 付款人於承兌時，得於匯票上記載付款地之付款處所。
+* 47 付款人承兌時，經執票人之同意，得就匯票金額之一部份為之。但執票人應將事由通知其前手。承兌附件者，視為承兌之拒絕。但承兌人仍依所附條件負其責任。執票人於獲一部份承兌後，對於未獲承兌之一部份，應作成拒絕證書證明之。
 
-* 48 付款人雖在匯票上簽名承兌，未將匯票交還執票人以前，仍得撤銷其承兌。但已向執票人或匯票簽名人以書面通知承兌者，不在此限。
+* 48 付款人於執票人請求承兌時，得請其延期為之。但以三日為限。
 
-* 49 付款人於承兌後，應負付款之責。承兌人到期不付款者；執票人雖係原發票人，亦得就第九十四條及第九十五條所定之金額，直接請求支付。
+* 49 匯票上未經發票人指定擔當付款人者，付款人得於承兌時記載之。
 
-* 50 執票人於到期日前得行使追索權時，匯票上指定有預備付款人者，得請求其為參加承兌。除預備付款人與票據債務人外，不問何人，經執票人同意，得以票據債務人中之一人，為被參加人，而為參加承兌。
+* 50 付款人於承兌時，得於匯票上記載付款地之付款處所。
 
-* 51 參加承兌，應在匯票正面記載左列各款，由參加承兌人簽名：一、參加承兌之意旨。二、被參加人姓名。三、年、月、日。未記載被參加人者，視為為發票人參加承兌。預備付款人為參加承兌時，以指定預備付款人之人，為被參加人。
+* 51 付款人雖在匯票上簽名承兌，未將匯票交還執票人以前，仍得撤銷其承兌。但已向執票人或匯票簽名人以書面通知承兌者，不在此限。
 
-* 52 參加人非受被參加人之委託，而為參加者，應於參加後，急速將參加事由，通知被參加人。參加人怠於為前項通知，因而發生損害時，應負賠償之責。
+* 52 付款人於承兌後，應負付款之責。承兌人到期不付款者，執票人雖係原發票人，亦得就第九十七條及第九十八條所定之金額，直接請求支付。
 
-* 53 執票人允許參加承兌後，不得於到期日前行使追索權。被參加人及其前手，仍得於參加承兌後，向執票人支付，第九十四條所定金額，請其交出匯票及拒絕證書。
+* 53 執票人於到期日前得行使追索權時，匯票上指定有預備付款人者，得請求其為參加承兌。除預備付款人與票據債務人外，不問何人，經執票人同意，得以票據債務人中之一人為被參加人，而為參加承兌。
 
-* 54 付款人或擔當付款人，不於第六十六條及第六十七條所定期限內付款時，參加承兌人，應負支付第九十四條所定金額之責。
+* 54 參加承兌，應在匯票正面記載左列各款，由參加承兌人簽名：一、參加承兌之意旨。二、被參加人姓名。三、年、月、日。未記載被參加人者，視為為發票人參加承兌。預備付款人為參加承兌時，以指定預備付款人之人為被參加人。
 
-* 55 匯票之債務，得由保證人保證之。前項保證人，除票據債務人外，不問何人，均得為之。
+* 55 參加人非受被參加人之委託而為參加者，應於參加後四日內，將參加事由通知被參加人。參加人怠於為前項通知因而發生損害時，應負賠償之責。
 
-* 56 保證應在匯票或其謄本上，記載左列各款，由保證人簽名：一、保證之意旨。二、被保證人姓名。三、年、月、日。保證未載明年月日者，以發票年月日為年月日。
+* 56 執票人允許參加承兌後，不得於到期日前行使追索權。被參加人及其前手，仍得於參加承兌後，向執票人支付第九十七條所定金額，請其交出匯票及拒絕證書。
 
-* 57 保證未載明被保證人者，視為為承兌人保證；其未經承兌者，視為為發票人保證。但得推知其為何人保證者，不在此限。
+* 57 付款人或擔當付款人，不於第六十九條及第七十條所定期限內付款時，參加承兌人應負支付第九十七條所定金額之責。
 
-* 58 保證人與被保證人，負同一責任。被保證人之債務，縱為無效，保證人仍負擔其義務。但被保證人之債務，因方式之欠缺，而為無效者，不在此限。
+* 58 匯票之債務，得由保證人保證之。前項保證人，除票據債務人外，不問何人，均得為之。
 
-* 59 二人以上為保證時，均應連帶負責。
+* 59 保證應在匯票或其謄本上記載左列各款，由保證人簽名：一、保證人之意旨。二、被保證人姓名。三、年、月、日。保證未載明年、月、日者，以發票年、月、日為年、月、日。
 
-* 60 保證得就匯票金額之一部分為之。
+* 60 保證未載明被保證人者，視為為承兌人保證；其未經承兌者，視為為發票人保證。但得推知其為何人保證者，不在此限。
 
-* 61 保證人清償債務後，得行使執票人對被保證人及其前手之追索權。
+* 61 保證人與被保證人負同一責任。被保證人之債務縱為無效，保證人仍負擔其義務。但被保證人之債務，因方式之欠缺而為無效者，不在此限。
 
-* 62 匯票之到期日，應依左列各式之一定之：一、定日付款。二、發票日後定期付款。三、見票即付。四、見票後定期付款。分期付款之匯票無效。
+* 62 二人以上為保證時，均應連帶負責。
 
-* 63 見票即付之匯票，以提示日為到期日。第四十二條之規定，於前項提示準用之。
+* 63 保證得就匯票金額之一部分為之。
 
-* 64 見票後定期付款之匯票，依承兌日或拒絕承兌證書作成日，計算到期日。匯票未載明承兌日，又無拒絕承兌證書者，依第四十二條所規定承兌提示期限之末日，計算到期日。
+* 64 保證人清償債務後，得行使執票人對被保證人及其前手之追索權。
 
-* 65 發票日後或見票日後一個月或數個月付款之匯票，以在應付款之月與該日期相當之日為到期日；無相當日者，以該月末日為到期日。發票日後或見票日後一個月半或數個月半付款之匯票，應依前項規定計算全月後，加十五日，以其末日為到期日。票上載月初、月中、月底者，謂月之一日、十五日、末日。
+* 65 匯票之到期日，應依左列各式之一定之。一、定日付款。二、發票日後定期付款。三、見票即付。四、見票後定期付款。分期付款之匯票無效。
 
-* 66 執票人應於到期日或其後二日內，為付款之提示。匯票上載有擔當付款人者，其付款之提示，應向擔當付款人為之。為交換票據，向票據交換所提示者，與付款之提示，有同一效力。
+* 66 見票即付之匯票，以提示日為到期日。第四十五條之規定，於前項提示準用之。
 
-* 67 付款經執票人之同意，得延期為之。但以提示後三日為限。
+* 67 見票後定期付款之匯票，依承兌日或拒絕證書作成日，計算到期日。匯票未載明承兌日，又無拒絕證明者，依第四十五條所規定，承兌提示期限之末日，計算到期日。
 
-* 68 付款人對於背書不連續之匯票而付款者，應自負其責。付款人對於背書簽名之真偽，及執票人是否本人，不負認定之責。但有詐欺或重大過失時，不在此限。
+* 68 發票日後或見票日後一個月或數個月付款之匯票，以在應付款之月與該日期相當之日為到期日；無相當日者，以該月末日為到期日。發票日後或見票日後一個月半或數個月半付款之匯票，應依前項規定，計算全月後加十五日，以其末日為到期日。票上僅載月初、月中、月底者，謂月之一日、十五日、末日。
 
-* 69 到期日前之付款，執票人得拒絕之。付款人於到期日前付款者，應自負其責。
+* 69 執票人應於到期日或其後二日內，為付款之提示。匯票上載有擔當付款人者，其付款之提示，應向擔當付款人為之。為交換票據向票據交換所提示者，與付款之提示有同一效力。
 
-* 70 一部分之付款，執票人不得拒絕。執票人於獲一部分付款後，對於未獲付款之一部分，應作成拒絕證書證明之。
+* 70 付款經執票人之同意，得延期為之。但以提示後三日為限。
 
-* 71 付款人付款時，得要求執票人記載收訖字樣，簽名為證，並交出匯票。付款人為一部分之付款時，得要求執票人在票上記載所收金額，並另給收據。
+* 71 付款人對於背書不連續之匯票而付款者，應自負其責。付款人對於背書簽名之真偽，及執票人是否本人，不負認定之責，但有詐欺或重大過失時，不在此限。
 
-* 72 表示匯票金額之貨幣，如為付款地不通用者，得依付款日行市，用付款地通用之貨幣支付之。但有特約者，不在此限。表示匯票金額之貨幣，如在發票地與付款地名同價異者，推定其為付款地之貨幣。
+* 72 到期日前之付款，執票人得拒絕之。付款人於到期日前付款者，應自負其責。
 
-* 73 執票人在第六十六條所定期限內不為付款之提示時，票據債務人得將匯票金額提存於付款地之法院、商會、銀行公會，或其他得受提存之公共會所其提存費用由執票人負擔之。前項提存有免除提存人債務之效力。
+* 73 一部付之付款，執票人不得拒絕。執票人於獲一部分付款後，對於未獲付款之一部分，應作成拒絕證書證明之。
 
-* 74 參加付款，應於執票人得行使追索權時為之。但至遲不得逾拒絕證書作成期限之末日。
+* 74 付款人付款時，得要求執票人記載收訖字樣簽名為證，並交出匯票。付款人為一部分之付款時，得要求執票人在票上記載所收金額，並另給收據。
 
-* 75 參加付款，不問何人，均得為之。執票人拒絕參加付款者，對於被參加人及其後手喪失追索權。
+* 75 表示匯票金額之貨幣，如為付款地不通用者，得依付款日行市，以付款地通用之貨幣支付之。但有特約者，不在此限。表示匯票金額之貨幣，如在發票地與付款地名同價異者，推定其為付款地之貨幣。
 
-* 76 付款人或擔當付款人不於第六十六條及第六十七條所定期限內付款者，有參加承兌人時，執票人應向參加承兌人為付款之提示；無參加承兌人而有預備付款人時，應向預備付款人為付款之提示。參加承兌人或預備付款人，不於付款提示時為清償者，執票人應請作成拒絕付款證書之機關，於拒絕證書上載明之。執票人違反前二項規定時，對於被參加人與指定預備付款人之人及其後手，喪失追索權。
+* 76 執票人在第六十九條所定期限內不為付款之提示時，票據債務人，得將匯票金額提存於付款地之法院、商會、銀行公會或其他得受提存之公共會所，其提存費用，由執票人負擔之。前項提存，有免除提存人債務之效力。
 
-* 77 請為參加付款者，有數人時，其能免除最多數之債務者，有優先權。故意違反前項規定為參加付款者，對於因之未能免除債務之人，喪失追索權。能免除最多數之債務者有數人時，應由受被參加人之委託者或預備付款人參加之。
+* 77 參加付款，應於執票人得行使追索權時為之。但至遲不得逾拒絕證明作成期限之末日。
 
-* 78 參加付款，應就被參加人應支付金額之全部為之。
+* 78 參加付款，不問何人，均得為之。執票人拒絕參加付款者，對於被參加人及其後手喪失追索權。
 
-* 79 參加付款，應於拒絕付款證書內記載之。參加承兌人付款，以被參加承兌人為被參加付款人，預備付款人付款，以指定預備付款人之人為被參加付款人。其無參加承兌人或預備付款人，而匯票上未記載被參加付款人者，以發票人為被參加付款人。第五十二條之規定，於參加付款準用之。
+* 79 付款人或擔當付款人，不於第六十九條及第七十條所定期限內付款者，有參加承兌人時，執票人應向參加承兌人為付款之提示；無參加承兌人而有預備付款人時，應向預備付款人為付款之提示。參加承兌人或預備付款人，不於付款提示時為清償者，執票人應請作成拒絕付款證書之機關，於拒絕證書上載明之。執票人違反前二項規定時，對於被參加人與指定預備付款人之人及其後手，喪失追索權。
 
-* 80 參加付款後，執票人應將匯票及收款清單交付參加付款人，有拒絕證書者，應一併交付之。違反前項之規定者，對於參加付款人，應負損害賠償之責。
+* 80 請為參加付款者有數人時，其能免除最多數之債務者，有優先權。故意違反前項規定為參加付款者，對於因之未能免除債務之人，喪失追索權。能免除最多數之債務者有數人時，應由受被參加人之委託者或預備付款人參加之。
 
-* 81 參加付款人對於承兌人、被參加付款人及其前手取得執票人之權利。但不得以背書更為轉讓。被參加付款人之後手，因參加付款而免除債務。
+* 81 參加付款，應就被參加人應支付金額之全部為之。
 
-* 82 匯票到期不獲付款時，執票人於行使或保全匯票上權利之行為後，對於背書人、發票人及匯票上其他債務人得行使追索權。有左列情形之一者，雖在到期日前，執票人亦得行使前項權利：一、匯票不獲承兌時。二、付款人或承兌人死亡、逃避或其他原因無從為承兌提示時。三、付款人或承兌人受破產宣告時。
+* 82 參加付款，應於拒絕付款證書內記載之。參加承兌人付款，以被參加承兌人為被參加付款人。預備付款人付款，以指定預備付款人之人為被參加付款人。無參加承兌人或預備付款人，而匯票上未記載被參加付款人者，以發票人為被參加付款人。第五十五條之規定，於參加付款準用之。
 
-* 83 匯票不獲承兌，或不獲付款，或無從為承兌提示時，執票人應請求作成拒絕證書證明之。付款人或承兌人在匯票上記載提示日期，及承兌或付款之拒絕，經其簽名後，與作成拒絕證書，有同一效力。付款人或承兌人之破產，應以破產宣告書之謄本證明之。
+* 83 參加付款後，執票人應將匯票及收款清單交付參加付款人，有拒絕證書者，應一併交付之。違反前項之規定者，對於參加付款人，應負損害賠償之責。
 
-* 84 拒絕承兌證書，應於提示承兌期內作成之。拒絕付款證書，應於拒絕付款日或其後二日內作成之。但執票人允許延期付款時，應於延期之末日，或其後二日內作成之。
+* 84 參加付款人，對於承兌人、被參加付款人及其前手，取得執票人之權利。但不得以背書更為轉讓。被參加付款人之後手，因參加付款而免除債務。
 
-* 85 拒絕承兌證書作成後，無須再為付款提示，亦無須再請求作成付款拒絕證書。
+* 85 匯票到期不獲付款時，執票人於行使或保全匯票上權利之行為後，對於背書人，發票人及匯票上其他債務人得行使追索權。有左列情形之一者，雖在到期日前，執票人亦得行使前項權利。一、匯票不獲承兌時。二、付款人或承兌人死亡，逃避或其他原因無從為承兌提示時。三、付款人或承兌人受破產宣告時。
 
-* 86 執票人應於拒絕證書作成後四日內，對於背書人、發票人及其他匯票上債務人，將拒絕事由通知之。如有特約免除作成拒絕證書時，執票人應於拒絕承兌或拒絕付款後四日內，為前項之通知。背書人應於收到前項通知後二日內，通知其前手。背書人未於票據上記載住所或記載不明時，其通知對背書人之前手為之。
+* 86 匯票不獲承兌，或不獲付款，或無從為承兌提示時，執票人應請求作成拒絕證書證明之。付款人或承兌人在匯票上記載提示日期及承兌或付款之拒絕，經其簽名後，與作成拒絕證書，有同一效力。付款人或承兌人之破產，應以破產宣告書之謄本證明之。
 
-* 87 發票人、背書人及匯票上其他債務人，得於第八十六條所定通知期限前，免除執票人通知之義務。
+* 87 拒絕承兌證書，於提示承兌期內作成之。拒絕付款證書，應於拒絕付款日或其後五日內作成之。但執票人允許延期付款時，應於延期之末日，或其後五日內作成之。
 
-* 88 通知得用任何方法為之。但主張於第八十六條所定期限內曾為通知者，應負舉證之責。付郵遞送之通知，如封面所記被通知人之住所無誤，視為已經通知。
+* 88 拒絕承兌證書作成後，無須再為付款提示，亦無須再請求作成付款拒絕證書。
 
-* 89 因不可抗力不能於第八十六條所定期限內，將通知發出者，應於障礙中止後，急速行之。證明於第八十六條所定期間內，已將通知發出者，認為遵守通知期限。
+* 89 執票人應於拒絕證書作成後四日內，對於背書人、發票人及其他匯票上債務人，將拒絕事由通知之。如有特約免除作成拒絕證書者，執票人應於拒絕承兌或拒絕付款後四日內，為前項之通知。背書人應於收到前項通知後四日內，通知其前手。背書人未於票據上記載住所或記載不明時，其通知對背書人之前手為之。
 
-* 90 不於第八十六條所定期限內為通知者，仍得行使追索權。但因其怠於通知發生損害時，應負賠償之責，其賠償金額，不得超過匯票金額。
+* 90 發票人、背書人及匯票上其他債務人，得於第八十九條所定通知期限前，免除執票人通知之義務。
 
-* 91 發票人或背書人，得為免除作成拒絕證書之記載。發票人為前項記載時，執票人得不請求作成拒絕證書而行使追索權。但執票人仍請求作成拒絕證書時，應自負擔其費用。背書人為第一項記載時，僅對於該背書人發生效力。執票人作成拒絕證書者，得向匯票上其他簽名人，要求償還其費用。
+* 91 通知得用任何方法為之。但主張於第八十九條所定期限內曾為通知者，應負舉證之責。付郵遞送之通知，如封面所記被通知人之住所無誤，視為已經通知。
 
-* 92 匯票上雖有免除作成拒絕證書之記載，執票人仍應於所定期限內，為承兌或付款之提示，但對於執票人主張未為提示者，應負舉證之責。
+* 92 因不可抗力，不能於第八十九條所定期限內將通知發出者，應於障礙中止後四日內行之。證明於第八十九條所定期間內已將通知發出者，認為遵守通知期限。
 
-* 93 發票人、承兌人、背書人及其他票據債務人，對於執票人連帶負責。執票人得不依負擔債務之先後，對於前項債務人之一人或數人或全體行使追索權。執票人對於債務人之一人或數人已為追索者，對於其他票據債務人，仍得行使追索權。被追索者，已為清償時，與執票人有同一權利。
+* 93 不於第八十九條所定期限內為通知者，仍得行使追索權。但因其怠於通知發生損害時，應負賠償之責；其賠償金額，不得超過匯票金額。
 
-* 94 執票人向匯票債務人行使追索權時，得要求左列金額：一、被拒絕承兌或付款之匯票金額，如有約定利息者，其利息。二、自到期日起如無約定利率者，依年利六厘計算之利息。三、作成拒絕證書與通知及其他必要費用。於到期日前付款者，自付款日至到期日前之利息，應由匯票金額內扣除。無約定利率者，依年利六厘計算。
+* 94 發票人或背書人，得為免除作成拒絕證書之記載。發票人為前項記載時，執票人得不請求作成拒絕證書，而行使追索權。但執票人仍請求作成拒絕證書時，應自負擔其費用。背書人為第一項記載時，僅對於該背書人發生效力。執票人作成拒絕證書者，得向匯票上其他簽名人要求償還其費用。
 
-* 95 為第九十四條之清償者，得向承兌人或前手要求左列金額：一、所支付之總金額。二、前款金額之利息。三、所支出之必要費用。發票人為第九十四條之清償者，向承兌人要求之金額同。
+* 95 匯票上雖有免除作成拒絕證書之記載，執票人仍應於所定期限內為承兌或付款之提示。但對於執票人主張未為提示者，應負舉證之責。
 
-* 96 發票人為背票人時，對其前手無追索權。前背書人為被背書人時，對其原有之後手無追索權。
+* 96 發票人、承兌人、背書人及其他票據債務人，對於執票人連帶負責。執票人得不依負擔債務之先後，對於前項債務人之一人或數人或全體行使追索權。執票人對於債務人之一人或數人已為追索者，對於其他票據債務人，仍得行使追索權。被追索者已為清債時，與執票人有同一權利。
 
-* 97 匯票上債務人為清償時，執票人應交出匯票及附有收據之償還計算書，有拒絕證書時，應一併交出。背書人為清償時，得塗銷自己及其後手之背書。
+* 97 執票人向匯票債務人行使追索權時，得要求左列金額：一、被拒絕承兌或付款之匯票金額，如有約定利息者，其利息。二、自到期日起如無約定利率者，依年利六釐計算之利息。三、作成拒絕證書與通知及其他必要費用。於到期日前付款者，自付款日至到期日前之利息，應由匯票金額內扣除。無約定利率者，依年利六釐計算。
 
-* 98 匯票金額一部分獲承兌時，清償未獲承兌之部分者，得要求執票人在匯票上記載其事由，並交出收據、匯票之謄本及其證書。
+* 98 為第九十七條之清償者，得向承兌人或前手要求左列金額：一、所支付之總金額。二、前款金額之利息。三、所支出之必要費用。發票人為第九十七條之清償者，向承兌人要求之金額同。
 
-* 99 有追索權者，得以發票人或前背書人之一人或其他票據債務人為付款人，向其住所所在地發見票即付之匯票。但有相反約定時，不在此限。前項匯票之金額，於第九十四條及第九十五條所列者外，得加經紀費及印花稅。
+* 99 發票人為背書人時，對其前手無追索權。前背書人為被背書人時，對其原有之後手，無追索權。
 
-* 100 執票人依第九十九條之規定發匯票時，其金額依原匯票付款地匯往前手所在地之見票即付匯票之市價定之。背書人依第九十九條之規定發匯票時，其金額依其所在地匯往前手所在地之見票即付匯票之市價定之。前二項市價，以發票日之市價為準。
+* 100 匯票上債務人為清償時，執票人應交出匯票及附有收據之償還計算書，有拒絕證書時，應一併交出。背書人為清償時，得塗銷自己及其後手之背書。
 
-* 101 執票人不於本法所定期限內為行使或保全匯票上權利之行為者，對於前手喪失追索權。執票人不於約定期限內為前項行為者，對於該約定之前手，喪失追索權。
+* 101 匯票金額一部份獲承兌時，清償未獲承兌之部份者，得要求執票人在匯票上記載其事由，並交出收據、匯票之謄本及其證書。
 
-* 102 執票人因不可抵抗之事變，不能於所定期限內為承兌或付款之提示，應將其事由從速通知發票人、背書人及其他票據債務人。第八十六條至第九十條之規定於前項通知準用之。不可抵抗之事變終止後，執票人應急速提示或作成拒絕證書。如事變延至到期日後三十日以外時，執票人得逕行使追索權，無須提示或作成拒絕證書。匯票為見票即付或見票後定期付款者，前項三十日之期限，自執票人通知其前手之日起算。
+* 102 有追索權者，得以發票人或前背書人之一人或其他票據債務人為付款人，向其住所所在地發見票即付之匯票。但有相反約定時，不在此限。前項匯票之金額，於第九十七條及第九十八條所列者外，得加經紀費及印花稅。
 
-* 103 拒絕證書，由執票人請求拒絕承兌地或拒絕付款地之公證人或法院商會銀行公會作成之。
+* 103 執票人依第一百零二條之規定發匯票時，其金額依原匯票付款地匯往前手所在地之見票即付匯票之市價定之。背書人依第一百零二條之規定發匯票時，其金額依其所在地匯往前手所在地之見票即付匯票之市價定之。前二項市價，以發票日之市價為準。
 
-* 104 拒絕證書應記載左列各款，由作成人簽名並蓋作成機關之印章：一、拒絕者及被拒絕者之姓名或商號。二、對於拒絕者，雖為請求，未得允許之意旨，或不能會晤拒絕者之事由，或其營業所、住所或居所不明之情形。三、為前款請求或不能為前款請求之地及其年月日。四、於法定處所外作成拒絕證書時，當事人之合意。五、有參加承兌時，或參加付款時，參加之種類及參加人，並被參加人之姓名或商號。六、拒絕證書作成之處所及其年月日。
+* 104 執票人不於本法所定期限內為行使或保全匯票上權利之行為者，對於前手喪失追索權。執票人不於約定期限內為前項行為者，對於該約定之前手喪失追索權。
 
-* 105 存款拒絕證書，應在匯票或其黏單上作成之。匯票有複本或謄本者，於提示時僅須在複本之一分或原本或其黏單上作成之。但可能時，應在其他複本之各分或謄本上記載已作拒絕證書之事由。
+* 105 執票人因不可抗力之事變，不能於所定期限內為承兌或付款之提示，應將其事由從速通知發票人、背書人及其他票據債務人。第八十九條至第九十三條之規定，於前項通知準用之。不可抗力之事變終止後，執票人應即對付款人提示。如事變延至到期日後三十日以外時，執票人得逕行使追索權，無須提示或作成拒絕證書。匯票為見票即付或見票後定期付款者，前項三十日之期限，自執票人通知其前手之日起算。
 
-* 106 付款拒絕證書以外之拒絕證書，應照匯票或其謄本作成抄本，在該抄本或其黏單上作成之。
+* 106 拒絕證書，由執票人請求拒絕承兌地或拒絕付款地之法院公證處、商會或銀行公會作成之。
 
-* 107 執票人以匯票之原本請求承兌或付款，而被拒絕，並未經返還原本時，其拒絕證書，應在謄本或其黏單上作成之。
+* 107 拒絕證書，應記載左列各款，由作成人簽名，並蓋作成機關之印章：一、拒絕者及被拒絕者之姓名或商號。二、對於拒絕者，雖為請求未得允許之意旨，或不能會晤拒絕者之事由，或其營業所、住所或居所不明之情形。三、為前款請求，或不能為前款請求之地及其年、月、日。四、於法定處所外作成拒絕證書時，當事人之合意。五、有參加承兌時或參加付款時，參加之種類及參加人，並被參加人之姓名或商號。六、拒絕證書作成之處所及其年、月、日。
 
-* 108 拒絕證書應接續匯票上、複本上或謄本上原有之最後記載作成之。在黏單上作成者，並應於騎縫處蓋章。
+* 108 付款拒絕證書，應在匯票或其黏單上作成之。匯票有複本或謄本者，於提示時，僅須在複本之一份或原本或其黏單上作成之。但可能時，應在其他複本之各份或謄本上記載已作拒絕證書之事由。
 
-* 109 對數人行使追索權時，只須作成拒絕證書一份。
+* 109 付款拒絕證書以外之拒絕證書，應照匯票或其謄本作成抄本，在該抄本或其黏單上作成之。
 
-* 110 拒絕證書作成人，應將證書原本交付執票人，並就證書全文另作抄本，存於事務所，以備原本滅失時之用。抄本與原本有同一效力。
+* 110 執票人以匯票之原本請求承兌或付款而被拒絕，並未經返還原本時，其拒絕證書，應在謄本或其黏單上作成之。
 
-* 111 匯票之受款人，得自負擔其費用，請求發票人發行複本。但受款人以外之執票人，請求發行複本時，須依次經由其前手請求之，並由其前手在各複本上，為同樣之背書。
+* 111 拒絕證書應接續匯票上、複本上或謄本上原有之最後記載作成之。在黏單上作成者，並應於騎縫處蓋章。
 
-* 112 複本應記載同一文句，標明複本字樣，並編列號數。未經標明複本字樣，並編列號數者，視為獨立之匯票。
+* 112 對數人行使追索權時，祇須作成拒絕證書一份。
 
-* 113 就複本之一付款時，其他複本失其效力。但承兌人對於經其承兌而未收回之複本，應負其責。背書人將複本分別轉讓於二人以上時，該背書人及其後手亦為分別轉讓者，對於經其背書而未收回之複本，應負其責。將複本各分背書轉讓與同一人者，該背書人為償還時，得請求執票人交出複本之各分。但執票人已立保證或提供擔保者，不在此限。
+* 113 拒絕證書作成人，應將證書原本交付執票人，並就證書全文另作抄本存於事務所，以備原本滅失時之用。抄本與原本有同一效力。
 
-* 114 為提示承兌送出複本之一者，應於其他各分上載明接收人之姓名或商號及其住址。匯票上有前項記載者，執票人得請求接收人交還其所接收之複本。接收人拒絕交還時，執票人非以拒絕證書證明左列各款事項，不得行使追索權：一、曾向接收人請求交還此項複本而未經其交還。二、以他複本為承兌或付款之提示，而不獲承兌或付款。
+* 114 匯票之受款人，得自負擔其費用，請求發票人發行複本。但受款人以外之執票人，請求發行複本時，須依次經由其前手請求之。並由其前手在各複本上，為同樣之背書。
 
-* 115 執票人有作成匯票謄本之權利。謄本應標明謄本字樣，謄寫原本上之一切事項，並註明迄於何處為謄寫部分。背書及保證，亦得在謄本上為之，與原本上所為之背書及保證有同一之效力。
+* 115 複本應記載同一文句，標明複本字樣，並編列號數。未經標明複本字樣，並編列號數者，視為獨立之匯票。
 
-* 116 為提示承兌送出原本者，應於謄本上載明原本接收人之姓名或商號及其住址。匯票上有前項記載者，執票人得請求接收人交還原本。接收人拒絕交還時，執票人非將曾向接收人請求交還原本而未經其交還之事由，以拒絕證書證明，不得行使追索權。
+* 116 就複本之一付款時，其他複本，失其效力，但承兌人對於經其承兌而未收回之複本，應負其責。背書人將複本分別轉讓於二人以上時，該背書人及其後手，亦為分別轉讓者，對於經其背書而未收回之複本，應負其責。將複本各份背書轉讓於同一人者，該背書人為償還時，得請求執票人交出複本之各份。但執票人已立保證或提供擔保者，不在此限。
 
-* 117 本票應記載左列事項，由發票人簽名：一、表明其為本票之文字。二、一定之金額。三、受款人之姓名或商號。四、無條件擔任支付。五、發票地及發票年、月、日。六、付款地。七、到期日。未載到期日者，視為見票即付。未載受款人者，以執票人為受款人。未載發票地者，以發票人之營業所、住所或居所所在地為發票地。未載付款地者，以發票地為付款地。
+* 117 為提示承兌送出複本之一者，應於其他各份上載明接收人之姓名或商號及住址。匯票上有前項記載者，執票人得請求接收人交還其所接收之複本。接收人拒絕交還時，執票人非以拒絕證書證明左列各款事項，不得行使追索權：一、曾向接收人請求交還此項複本，而未經其交還。二、以他複本為承兌或付款之提示，而不獲承兌或付款。
 
-* 118 本票發票人所負責任，與匯票承兌人同。
+* 118 執票人有作成匯票謄本之權利。謄本應標明謄本字樣，謄寫原本上之一切事項，並註明迄於何處為謄寫部分。執票人就匯票作成謄本時，應將已作成謄本之旨，記載於原本。背書及保證，亦得在謄本上為之，與原本上所為之背書及保證有同一效力。
 
-* 119 見票後定期付款之本票，應由執票人向發票人為見票之提示，請其簽名，並記載見票字樣及日期，其提示期限，準用第四十二條之規定。未載見票日期者，應以所定提示見票期限之末日為見票日。發票人於提示見票時，拒絕簽名者，執票人應於提示見票期限內，請求作成拒絕證書。執票人不於第四十二條所定期限內為見票之提示或作成拒絕證書者，對於發票人以外之前手喪失追索權。
+* 119 為提示承兌送出原本者，應於謄本上載明原本接收人之姓名或商號及其住址。匯票上有前項記載者，執票人得請求接收人交還原本。接收人拒絕交還時，執票人非將曾向接收人請求交還原本而未經其交還之事由，以拒絕證書證明，不得行使追索權。
 
-* 120 第二章第一節第二十三條第一項及第二十五條，關於發票人之規定；第二章第二節關於背書之規定，除第三十二條外；第二章第五節關於保證之規定；第二章第六節關於到期之規定；第二章第七節關於付款之規定；第二章第八節關於參加付款之規定，除第七十六條及第七十九條第二項外；第二章第九節關於追索權之規定；除第八十四條第一項、第八十五條及第九十八條外；第二章第十節關於拒絕證書之規定；第二章第十二節關於謄本之規定，除第一百十六條外；均於本票準用之。
+* 120 本票，應記載左列事項，由發票人簽名：一、表明其為本票之文字。二、一定之金額。三、受款人之姓名、或商號。四、無條件擔任支付。五、發票地。六、發票年、月、日。七、付款地。八、到期日。未載到期日者，視為見票即付。未載受款人者，以執票人為受款人。未載發票地者，以發票人之營業所、住所或居所所在地為發票地。未載付款地者，以發票地為付款地。
 
-* 121 支票應記載左列事項，由發票人簽名：一、表明其為支票之文字。二、一定之金額。三、付款人之商號。四、受款人之姓名或商號。五、無條件支付之委託。六、發票地及發票年、月、日。七、付款地。未載受款人者，以執票人為受款人。發票人得以自己或付款人為受款人，並得以自己為付款人。
+* 121 本票發票人所負責任，與匯票承兌人同。
 
-* 122 發票人應照支票文義擔保支票之支付。
+* 122 見票後定期付款之本票，應由執票人向發票人為見票之提示，請其簽名，並記載見票字樣及日期；其提示期限，準用第四十五條之規定。未載見票日期者，應以所定提示見票期限之末日為見票日。發票人於提示見票時，拒絕簽名者，執票人應於提示見票期限內，請求作成拒絕證書。執票人依前項規定，作成見票拒絕證書後，無須再為付款之提示，亦無須再請求作成付款拒絕證書。執票人不於第四十五條所定期限內為見票之提示或作成拒絕證書者，對於發票人以外之前手，喪失追索權。
 
-* 123 支票之付款人，以銀錢業者及信用合作社為限。
+* 123 執票人向本票發票人行使追索權時，得聲請法院裁定後強制執行。
 
-* 124 支票限於見票即付，有相反之記載者，其記載無效。
+* 124 第二章第一節第二十六條第一項及第二十八條，關於發票人之規定，第二章第二節關於背書之規定，除第三十五條外，第二章第五節關於保證之規定，第二章第六節關於到期之規定，第二章第七節關於付款之規定，第二章第八節關於參加付款之規定，除第七十九條及第八十二條第二項外，第二章第九節關於追索權之規定，除第八十七條第一項、第八十八條及第一百零一條外，第二章第十節關於拒絕證書之規定，第二章第十二節關於謄本之規定，除第一百十九條外，均於本票準用之。
 
-* 125 以支票轉帳或為抵銷者，視為支票之支付。
+* 125 支票應記載左列事項，由發票人簽名：一、表明其為支票之文字。二、一定之金額。三、付款人之商號。四、受款人之姓名或商號。五、無條件支付之委託。六、發票地。七、發票年、月、日。八、付款地。未載受款人者，以執票人為受款人。未載發票地者，以發票人之營業所、住所或居所為發票地。發票人得以自己或付款人為受款人，並得以自己為付款人。依本法第一百二十八條第二項提示付款者，其提示日視為發票日。
 
-* 126 支票之執票人，應於左列期限內，為付款之提示：一、在發票地付款者，發票日後十日內。二、不在發票地付款者，發票日後一個月內。三、發票地在國外，付款地在國內者，發票日後三個月內。
+* 126 發票人應照支票文義擔保支票之支付。
 
-* 127 執票人於第一百二十六條所定提示期限內，為付款之提示而被拒絕時，對於前手得行使追索權。但應於拒絕付款日或其後二日內，請求作成拒絕證書。付款人於支票上記載拒絕文義及其年、月、日，並簽名者，與作成拒絕證書，有同一效力。向票據交換所提示之支票，如有拒絕文義之記載，與作成拒絕證書有同一效力。
+* 127 支票之付款人以銀錢業者及信用合作社為限。
 
-* 128 執票人不於第一百二十六條所定期限內為付款之提示，或不於拒絕付款日或其後二日內，請求作成拒絕證書者，對於發票人以外之前手，喪失追索權。
+* 128 支票限於見票即付，有相反之記載者，其記載無效。執票人於票載日期前，提示付款時，應即付款。
 
-* 129 發票人雖於提示期限經過後，對於執票人仍負責任。但執票人怠於提示，致使發票人受損失時，應負賠償之責，其賠償金額，不得超過票面金額。
+* 129 以支票轉帳或為抵銷者，視為支票之支付。
 
-* 130 發票人於第一百二十六條所定期限內，不得撤銷付款之委託。但支票遺失或被盜竊或以惡意或重大過失取得時不在此限。
+* 130 支票之執票人，除依第一百二十八條第二項規定提示外，應於左列期限內，為付款之提示：一、在發票地付款者，發票日後十日內。二、不在發票地付款者，發票日後一個月內。三、發票地在國外，付款地在國內者，發票日後三個月內。
 
-* 131 付款人於提示期限經過後，仍得付款。但有左列情事之一者，不在此限：一、發票人撤銷付款之委託時。二、發行滿一年時。
+* 131 執票人於第一百三十條所定提示期限內，為付款之提示而被拒絕時，對於前手得行使追索權。但應於拒絕付款日或其後五日內，請求作成拒絕證書。付款人於支票上記載拒絕文義及其年、月、日並簽名者，與作成拒絕證書，有同一效力。向票據交換所提示之支票，如有拒絕文義之記載，與作成拒絕證書，有同一效力。
 
-* 132 付款人於發票人之存款或信用契約所約定之數不敷支付支票金額時，經執票人之同意，得就一部分支付之。前項情形，執票人應於支票上記明實收之數目。
+* 132 執票人不於第一百三十條所定期限內為付款之提示，或不於拒絕付款日或其後五日內請求作成拒絕證書者，對於發票人以外之前手，喪失追索權。
 
-* 133 付款人於支票上記載照付或保付或其他同義字樣後，其付款責任與匯票承兌人同。付款人於支票上已為前項之記載時，發票人及背書人免除其責任。付款人不得為存款額外或信用契約所約定數目以外之保付，違反者應科以罰鍰，但罰鍰不得超過支票金額。
+* 133 執票人向支票債務人行使追索權時，得請求自為付款提示日起之利息。如無約定利率者，依年利六釐計算。
 
-* 134 發票人、背書人或執票人，在支票正面畫平行線二道，或於其線內並記載銀行公司或其他同義之文字者，其支票僅得對銀錢業者支付之。發票人、背書人或執票人，於平行線內記載特定銀錢業者之商號，其支票僅得對於特定銀錢業者支付支之。銀錢業者受委託取款時，得於未畫線支票正面畫平行線二道，或於平行線之內記載自己之商號，或塗銷自己之商號，記載其他銀錢業者之商號再為背書委託其取款。
+* 134 發票人雖於提示期限經過後，對於執票人仍負責任。但執票人怠於提示，致使發票人受損失時，應負賠償之責；其賠償金額，不得超過票面金額。
 
-* 135 違反第一百三十四條之規定而付款者，應負賠償損害之責。但賠償金額不得超過支票金額。
+* 135 發票人於第一百三十條所定期限內，不得撤銷付款之委託。但支票遺失或被盜竊或以惡意或重大過失取得時，不在此限。
 
-* 136 明知已無存款，又未經付款人允許墊借而對之發支票者，應科以罰金，但罰金不得超過支票金額。發支票時，故意將金額超過其存數或超過付款人允許墊借之金額者，應科以罰金，但罰金不得逾超過之金額。發票人於第一百二十六條所定期限內，故意提回其存款之全部或一部，使支票不獲支付者，準用前二項之規定。
+* 136 付款人於提示期限經過後，仍得付款。但有左列情事之一者，不在此限：一、發票人撤銷付款之委託時。二、發行滿一年時。
 
-* 137 付款人於發票人之存款或信用契約所約定之數，足敷支付支票金額時，應負支付之責。但收到發票人受破產宣告之通知者，不在此限。
+* 137 付款人於發票人之存款或信用契約所約定之數不敷支付支票金額時，得就一部分支付之。前項情形，執票人應於支票上記明實收之數目。
 
-* 138 第二章第二節關於背書之規定，除第三十二條外；第二章第七節關於付款之規定，除第六十六條第一項、第二項、第六十七條、第六十九條、第七十三條外；第二章第九節關於追索權之規定，除第八十二條第二項第一款、第二款、第八十四條、第八十五條及第九十八條外；第二章第十節關於拒絕證書之規定，除第一百零五條第二項、第一百零六條及第一百零七條外；於支票準用之。
+* 138 付款人於支票上記載照付或保付或其他同義字樣後，其付款責任與匯票承兌人同。付款人於支票上已為前項之記載時，發票人及背書人免除其責任。付款人不得為存款額外或信用契約所約定數目以外之保付，違反者應科以罰鍰。但罰鍰不得超過支票金額。
 
-* 139 本法自公布日施行。
+* 139 發票人背書人或執票人在支票正面畫平行線二道，或於其線內並記載銀行、公司或其他同義之文字者，其支票僅得對銀錢業者支付之。發票人、背書人或執票人，於平行線內記載特定銀錢業者之商號，其支票僅得對於特定銀錢業者支付之。但該特定銀錢業者，得以其他銀錢業者為被背書人，背書後委託其取款。銀錢業者受委託取款時，得於未畫線支票正面畫平行線二道，或於平行線內記載自己之商號。
+
+* 140 違反第一百三十九條之規定而付款者，應負賠償損害之責。但賠償金額不得超過支票金額。
+
+* 141 明知已無存款，又未經付款人允許墊借，而對之發支票者，處一年以下有期徒刑、拘役或科或併科該支票面額以下之罰金。發支票時故意將金額超過其存數或超過付款人允許墊借之金額者，處一年以下有期徒刑、拘役或科或併科該超過金額以下之罰金。發票人於第一百三十條所定之期限內，故意提回其存款之全部或一部，使支票不獲支付者，準用前二項之規定。
+
+* 142 依前條規定處罰之案件，不適用刑法第五十六條之規定。（中華民國七十五年十二月三十一日施行期限屆滿）。
+
+* 143 付款人於發票人之存款或信用契約所約定之數，足敷支付支票金額時，應負支付之責。但收到發票人受破產宣告之通知者，不在此限。
+
+* 144 第二章第二節關於背書之規定，除第三十五條外，第二章第七節關於付款之規定，除第六十九條第一項、第二項、第七十條、第七十二條、第七十六條外，第二章第九節關於追索權之規定，除第八十五條第二項第一款第二款、第八十七條、第八十八條、第九十七條第一項第二款、第二項及第一百零一條外，第二章第十節關於拒絕證書之規定，除第一百零八條第二項，第一百零九條及第一百十條外，於支票準用之。
+
+* 145 本法自公布日施行。
 
