--- a/行政-內政/戶籍法.md
+++ b/行政-內政/戶籍法.md
@@ -1,124 +1,124 @@
-* 1 關於戶籍及人事之登記，依本法之規定。
+* 1 中華民國人民戶籍之登記依本法之規定。
 
-* 2 戶籍之籍別，以縣市為單位。
+* 2 本法關於省之規定，適用於院轄市，關於縣之規定，適用於省轄市及設治局。
 
-* 3 戶籍及人事之登記，以縣之鄉鎮區域及市之坊區域為其管轄區域。
+* 3 戶籍行政之主管機關，在中央為內政部，在省為省政府，在縣為縣政府。
 
-* 4 中華民國人民，依左列之規定，定其戶籍。一、在一縣或一市區域內有住所三年以上而在他縣市內無本籍者，以該縣或市為本籍。二、子女除別有本籍者外，以其父母之本籍為本籍。三、棄兒父母無可考者，以發現人報告地為本籍。四、妻以夫之本籍為本籍，贅夫以妻之本籍為本籍。一人不得同時有兩本籍。
+* 4 戶口之查記得為戶之編造，凡在同一處所同一主管人之下共同生活或經營共同事業者為一戶，以家長或主管人為戶長。
 
-* 5 已有本籍而在他縣市內有住所或居所滿六個月者，以該縣或市為其寄籍，無本籍或本籍不明而在一縣市內有住所或居所未滿六個月者亦同。一人不得同時有兩寄籍。
+* 5 中華民國人民之籍別，以省及其所屬之縣為依據。
 
-* 6 無中華民國國籍者，不得於中華民國領域內設定本籍，其在中華民國之縣市內有住所或居所滿六個月以上者，以該縣或市為其寄留地。本法關於寄籍之規定，於寄留地準用之。
+* 6 戶籍登記以鄉鎮為管轄區域，以鄉鎮長兼任戶籍主任，並設戶籍幹事若干人，由鄉鎮長指定所屬自治人員兼任之。本法關於鄉鎮之規定，適用於市之區。
 
-* 7 陸上無住所居所而在船舶上住居者，以船舶之常泊地為其住所居所所在地。
+* 7 僑居外國之中華民國人民，其戶籍登記，由當地中國使館或領事館為之，並由使館或領事館按月彙送內政部，分別發交其本籍地之各該管戶籍主任。
 
-* 8 戶籍之編造，以一家為一戶，雖屬一家而異居者，各為一戶。僧道或其他宗教徒所住之寺院，以一寺院為一戶，寺院之主管人在本法上之地位，與家長同。
+* 8 籍別登記，身分登記及遷徙登記，由鄉鎮公所為之。但流動人口之登記，由保辦公處為之。
 
-* 9 無本籍或本籍不明而在同一救濟機關留養者，合編為一戶，該機關之管理人在本法上之地位，與家長同。
+* 9 辦理登記所用簿冊卡片及聲請書類等，應永久保存，除因避免天災事變外，不得攜出保存處所。前項書類之格式，由內政部訂之。
 
-* 10 每戶籍管轄區域，設戶籍主任一人，戶籍員若干人，掌理戶籍及人事登記事務，於鄉鎮公所或坊公所內辦理之。戶籍主任由鄉長、鎮長或坊長兼任之，戶籍員由鄉鎮長或坊長指定所屬自治人員兼任之。
+* 10 籍別登記，應載明與被登記者共同生活之家屬，身分登記，應載明其關係人。前項規定，於遷徒及變更、更正、撤銷等項之登記準用之。
 
-* 11 戶籍主任、戶籍員，關於本人或與本人同屬一家之人之戶籍及人事登記事件，不得執行其職務，應由他戶籍員之年長者為之。
+* 11 已辦戶籍登記之地方，得製發國民身分證，或經內政部核准以戶籍謄本代之。
 
-* 12 戶籍主任或戶籍員，於執行職務因故意或重大過失致聲請人或其他關係人受損害時，應負賠償之責。
+* 12 利害關係人得納費請求閱覽戶籍登記簿或交付謄本。前項閱覽費每次二元，謄本抄錄費每百字五元，不滿百字者以百字計算。法院於必要時，得命戶籍主任交付謄本。
 
-* 13 戶籍及人事登記事務，以鄉鎮公所或坊公所所屬之縣市政府為直接監督官署。區長有襄助縣長或市長指導區內各鄉鎮或各坊辦理戶籍及人事登記事務之責任。
+* 13 各機關所需之戶口資料，應以戶籍為依據，除法律另有規定外，不得另辦他種戶口查記。
 
-* 14 戶籍主任應依據戶籍登記簿、人事登記簿，分別編造左列各項統計季報及統計年報，呈送監督官署。一、本籍及寄籍戶數人口性別年齡統計。二、出生之男女及其父母年齡職業統計。三、死亡之男女及其年齡職業與死亡原因統計。四、死產及其性別與死產原因統計。五、結婚與離婚之男女及其年齡職業統計。六、男女之職業統計。七、宣告死亡事件統計。八、戶籍變更事件統計。九、同一戶籍監督區域之遷居統計。十、國籍變更事件統計。十一、僑居之外國人及其性別年齡職業國籍統計。十二、其他應行呈報事項。監督官署接到前項報告後，應即編造關於全縣市之分類統計季報及統計年報各二份，呈送民政廳，由民政廳以一份存查，一份傳呈內政部。直隸行政院之市，應依前項規定，編造統計季報及統計年報，咨送內政部。前三項統計表格，由內政部定之。
+* 14 辦理戶籍登記，得先辦戶口調查。
 
-* 15 戶籍及人事登記事務之經費，由縣市政府稅收項下支出之。
+* 15 辦理戶籍登記之各級主管機關，應分製各種統計表，按期呈送該管上級機關。
 
-* 16 戶籍登記簿，分本籍登記簿與寄籍登記簿兩種，每種各備正副二本。前項登記簿格式，由內政部定之。
+* 16 辦理戶籍之經費，應列入各級政府預算。
 
-* 17 戶籍登記簿由縣市政府依照格式分別製定，於每張編記紙數號數蓋印，並於簿面之裡面記明張數蓋印，先期發交各戶籍主任。
+* 17 中華民國人民之本籍，依左列之規定：一、子女除別有本籍者外，以其父母之本籍為本籍。二、棄兒父母無可考者，以發現人報告地為本籍。三、妻以夫之本籍為本籍，贅夫以妻之本籍為本籍。四、陸上無住所，而在船舶上居住者，以船舶之常泊地為本籍。五、僧道或其他宗教徒，無本籍或本籍不明者，以所住寺院之所在地為本籍。六、在救濟機關留養，無本籍或本籍不明者，以救濟機關所在地為本籍。七、僑居國外人民，以未出國時之本籍為本籍。一人同時不得有兩本籍。
 
-* 18 戶籍登記，每戶用紙一份，每戶一號。
+* 18 合於左列各款情事之一者，應為設籍登記。一、出生者。二、因結婚離婚而轉籍者。三、因被認領收養或其關係終止而轉籍者。四、原無本籍，而在一縣內居住三年以上者。五、由他縣遷入，有久住之意思者。六、外國人取得中華民國國籍，或中華民國人民回復國籍者。七、死亡宣告撤銷者。八、因其他原因致無本籍者。已有本籍，而在他縣內有住所或居所一年以上者，以該縣為其寄籍，但一人同時不得有兩寄籍。
 
-* 19 戶籍登記，應依管轄區域內之自治區劃，編訂號數，分別記明於戶籍登記簿內每戶用紙之首。
+* 19 合於左列各款情事之一者，應為除籍登記：一、死亡或受死亡宣告者。二、喪失中華民國國籍者。三、遷往他縣，有久住之意思者。四、有前條第二款或第三款情事之一者。五、因其他原因應除籍者。
 
-* 20 戶籍整記簿正本，由鄉鎮公所或坊公所永久保存，副本呈送監督官署永久保存。
+* 20 出生及發現棄兒者，應為出生之登記。
 
-* 21 戶籍登記簿，除因避免天災事變外，不得攜出保存處所。
+* 21 認領非婚生子女者，應為認領之登記。
 
-* 22 戶籍登記簿，無論何人得納費請求閱覽或交付謄本。前項閱覽費，每次五分，謄本抄錄費，每百字一角，不滿百字者，以百字計算。法院於必要時，得命戶籍主任交付謄本。
+* 22 收養他人子女為子女者，應為收養之登記。
 
-* 23 戶籍登記簿因天災事變致一部或全部滅失毀損時，戶籍主任應從速開具左列事項，報告監督官署。一、保存之處所。二、滅失毀損之張數及冊數。三、滅失毀損之事由。四、滅失毀損之年月日。監督官署接到前項報告後，應令戶籍主任依照戶籍登記簿副本，重行編造或補造。
+* 23 結婚者，應為結婚之登記。
 
-* 24 人事登記簿應依左列事項各為一冊。一、出生。二、認領。三、收養。四、結婚。五、離婚。六、監護。七、死亡。八、死亡宣告。九、繼承。前項登記簿之製發，準用第十七條之規定，但祇須每張騎縫蓋印。
+* 24 離婚者，應為離婚之登記。
 
-* 25 第十六條及第二十條至第二十三條之規定，於人事登記簿準用之。
+* 25 有死亡或受死亡宣告者，應為死亡或死亡宣告之登記。
 
-* 26 戶籍及人事登記之聲請，除另有規定外，應向聲請人本籍或寄籍所在地之鄉鎮公所或坊公所為之。
+* 26 各省政府於必要時，得令各縣辦理監護及繼承之登記。
 
-* 27 登記之聲請，以書面為之。但有正當事由時，得由聲請人親向戶籍主任以言詞為之。
+* 27 遷出原戶籍管轄區域在一個月以上，不變更所屬之籍者，應為遷出之登記。
 
-* 28 登記聲請書，應記載左列事項，由聲請人簽名。一、聲請人之姓名、性別、出生年月日、職業、籍別及住所。二、聲請事件及年月日。聲請人以言詞為聲請時，戶籍主任應依前項各款所定事項，製作筆錄，向聲請人朗讀，並令其簽名。
+* 28 由他戶籍管轄區域遷入在一個月以上，不變更所屬之籍者應為遷入之登記。
 
-* 29 依本法之規定聲請書應記載之事項，其事實不存在或不知悉者，得記明其事由而缺略之。但其事項特別重要不得缺略者，不在此限。
+* 29 遷出原戶籍管轄區域未滿一個月，不變更所屬之籍者，應為流動人口之登記。
 
-* 30 聲請人非為聲請事件之本人時，應於聲請書中記載其與本人之關係。
+* 30 戶籍登記事項有變更時，應為變更之登記。
 
-* 31 聲請義務人為未成年人或禁治產人時，以其法定代理人為聲請人。但於婚姻或認領事件，不在此限。前項聲請，應於聲請書中載明左列各款事項。一、聲請義務人之姓名、性別、出生年月日、職業、籍別及住所。二、不能自行聲請之原因。三、聲請人與聲請義務人之關係。
+* 31 因登記發生訴訟者，仍應先為聲請登記俟判決確定後，再聲請為變更之登記。
 
-* 32 聲請事件應有證明人者，聲請書中應載明證明人之姓名、性別、出生年月日、職業、籍別及住所，並由證明人簽名。
+* 32 戶籍登記事項有錯誤或脫漏時，應為更正之登記。
 
-* 33 聲請書應筆畫分明，不得用簡字或符號，並不得塗抹。如有更改增刪，應記明字數，並於更改增刪處由聲請人蓋章。記載年月日及年齡之數目字，應用大寫。
+* 33 戶籍登記事項消滅時，應為撤銷之登記。
 
-* 34 凡登記事件應在兩處以上之鄉鎮公所或坊公所之登記簿為記載者，應提出與鄉鎮公所坊公所同數之聲請書。在本籍寄籍地以外為聲請時，除依前項規定外，應另提出聲請書一份。
+* 34 戶籍登記之聲請，除另有規定外，應由聲請義務人向所在地之鄉鎮公所為之。
 
-* 35 聲請事件應經官署之許可者，聲請人應附具許可書之謄本。
+* 35 登記之聲請，以書面為之，但有正當理由時，得由聲請人親向戶籍登記機關以言詞為之。
 
-* 36 聲請人因疾病或其他事故不能親自聲請者，得由代理人為之。前項規定，於認領、收養、結婚、離婚登記之聲請，不適用之。
+* 36 登記聲請書應記載左列事項，由聲請人簽名或劃押：一、聲請人之姓名、性別、出生年、月、日、職業、籍別、及住所。二、聲請事件及年、月、日。聲請人以言詞為聲請時，戶籍登記機關應依前項各款所定事項，製作筆錄，向聲請人朗讀，並令其簽名或劃押。
 
-* 37 僑居外國之中國人，遇有聲請事件，應向中國使館或領事館為之。僑居外國之中國人，如依所在國之法律程序，作成關於聲請事件之證明書時，應於一個月內，將其證明書謄本呈送所在國之中國使館或領事館。但其所在國無中國使館及領事館者，應於三個月內或歸國後一個月內，將證明書謄本呈送本籍地該管戶籍主任。使館或領使館接到聲請書或證明書謄本後，應於一個月內寄送外交部，轉咨內政部飭交聲請事件本人之本籍地該管戶籍主任。
+* 37 籍別登記，遷徙登記，以本人或家長為聲請義務人，在寺院者，以其主持人為聲請義務人。在救濟機關者，以其主管人為聲請義務人。
 
-* 38 聲請期間，自聲請事伴發生之日起算。聲請期間應由法院裁判確定之日起算者，如裁判送達前已確定時，自裁判書送達於聲請人之日起算。
+* 38 出生登記，以父或母為聲請義務人，父母均不能為聲請時，依左列順序定之：一、家長。二、同居人。三、分娩時臨視之醫生或助產士。四、分娩時在旁照顧之人。
 
-* 39 戶籍主任，應將本法所定各項聲請事件及聲請期間公告之。戶籍主任查有不於法定聲請期間聲請者，應定相當期間催告聲請義務人聲請之。
+* 39 在醫院、監獄或其他公共場所出生之子女，其父母不能為登記之聲請時，分別以醫院院長，監獄長官或其他公共場所管理人為聲請義務人。
 
-* 40 經前條催告而仍不依期聲請者，戶籍主任除呈請監督官署分別核辦外，應再令聲請義務人即補行聲請。
+* 40 棄兒之發現，以發現人為聲請義務人。
 
-* 41 聲請期間或催告期間經過後始行聲請者，戶籍主任仍應受理之。
+* 41 認領登記，以認領人為聲請義務人，依遺囑為認領者，以遺囑執行人為聲請義務人。
 
-* 42 戶籍主任因聲請人之請求，應發給受理聲請之證明書。
+* 42 收養登記，以養父母為聲請義務人。
 
-* 43 關於登記聲請之規定，於撤銷登記及變更登記之聲請準用之。
+* 43 結婚或離婚登記，以雙方當事人為聲請義務人。
 
-* 44 凡一戶欲將本籍由一縣市移轉於他一縣市者，由家長向本籍地戶籍主任請求發給轉籍證明書，並具聲請書二份，載明左列各款事項聲請之。一、家長及家屬之姓名性別出生年月日及職業。二、本籍地及戶籍號數。三、新籍地該管鄉鎮坊之名稱。前項聲請，得向新籍地之戶籍主任為之。前二項之規定，於寄籍之移轉準用之。
+* 44 死亡登記，聲請義務人之順序如左：一、家長。二、同居人。三、死亡者死亡時所在之房屋或土地管理人。四、經理殮葬之人。
 
-* 45 在同一縣市內之戶，欲由一鄉鎮坊遷徙於他鄉鎮坊者，應由家長具聲請書，載明戶籍號數及他鄉鎮坊之名稱，向原鄉鎮坊之戶籍主任聲請之。戶籍主任接到前項聲請書後，應即作成聲請人之戶籍謄本，送交他鄉鎮坊之戶籍主任。
+* 45 被執行死刑者或在監獄看守所內死亡，而無人承領者，以其監所長官為聲請義務人。
 
-* 46 因聲請之遺漏或其他事由，致無本籍或發生複本籍而聲請設籍或除籍者，應先經設籍地或除籍地監督官署之許可。
+* 46 因災難死亡，或死亡者之籍別不明或不能辨認其為何人，應由該管警察機關通知戶籍登記機關。
 
-* 47 設籍之聲請，應自許可之日起十五日內，由家長開具左列各款事項，連同許可書謄本向設籍地之該管戶籍主任為之。一、設籍人及其同家人之姓名、性別、出生年月日及職業。二、無本籍之原因。三、無本籍原因發生前之舊本籍。四、設籍人如為家長，其為家長之原因。五、設籍人如係家屬，其與家長之親屬關係。依國籍法之規定取得國籍或回復國籍而設籍者，準用前項之規定，並應開具取得國籍或回復國籍之原因，其取得國籍回復國籍之許可書，與該管監督官署之許可書有同一之效力。
+* 47 死亡宣告之登記，以聲請死亡宣告者為聲請義務人。
 
-* 48 除籍之聲請，應自許可之日起十五日內，由家長開具左列各款事項，連同許可書謄本，向除籍地之該管戶籍主任為之。一、除籍人及其同家人之姓名、性別、出生年月日及職業。二、本籍及複本籍。三、發生複本籍之原因。四、本籍之家屬與複本籍相異時，其相異之原因。因一戶消滅而除籍者，以該戶最後死亡者死亡登記之聲請視為除籍之聲請。依國籍法之規定喪失國籍而除籍者，內政部於發給許可證明書後，應將許可書謄本飭交其本籍地戶籍主任，視為除籍之聲請。
+* 48 監護登記，以監護人為聲請義務人。
 
-* 49 依確定判決而為設籍或除籍之聲請者，無須經監督官署之許可，但應附具判決書謄本。
+* 49 繼承登記，以繼承人為聲請義務人，繼承人為胎兒時，以其母或監護人為聲請義務人。
 
-* 50 因分戶或其他原因而創設新戶者，準用第四十七條第一項之規定並開具創設新戶之原因。
+* 50 變更、更正、撤銷之登記，以原聲請人或其他利害關係人為聲請義務人。
 
-* 51 子女之出生，應自出生之日起一個月內，開具左列各款事項聲請登記。一、子女之姓名、出生年月日時及出生地。二、父母之姓名、職業及本籍。但未經認領之非婚生子女，僅記載其母子姓名、職業及本籍。三、家長之姓名、職業及與出生子女之身分關係。四、父母無國籍者，其無國籍之原因。五、聲請登記之年月日。六、聲請人非為父母時，其姓名、性別、職業及本籍。出生如係雙胎或多胎，應為每一子女各具聲請書，並載明其出生之先後。
+* 51 聲請義務人因故不能親自聲請者；得委託他人為之。前項規定，於認領、收養、結婚離婚登記之聲請，不適用之。
 
-* 52 出生之登記，由父或母聲請之。父母均不能為聲請時，依左列次序定其聲請義務人。一、家長。二、同居人。三、分娩時臨視之醫生或助產士。四、分娩時在旁照護之人。
+* 52 戶籍登記之聲請，應於事件發生或確定後十五日內為之，但遷出之登記，應於事前為之。戶籍主任查有不於法定期間聲請者，應以書面定期催告，其逾期聲請者，仍應受理之。
 
-* 53 出生登記之聲請，應向出生地之戶籍主任為之。
+* 53 無正當理由不於法定期間為登記之聲請者，處十元以下罰鍰，經催告而仍不為聲請者，處二十元以下罰鍰。
 
-* 54 對於出生之子女欲提起否認之訴者，仍應為出生登記之聲請，俟其否認經判決確定後，再行附具判決書謄本聲請變更登記。
+* 54 聲請人為不實之呈報者，處五十元以下罰鍰。
 
-* 55 在醫院、監獄或其他公共場所出生之子女，其父母不能為登記之聲請時，由醫院院長、監獄長官或其他公共場所管理人聲請之。
+* 55 前二條罰鍰之決定，由該管縣政府為之。
 
-* 56 在行駛之火車、長途汽車、電車或飛機中或不備航行日記簿之船舶中出生者，以其母之到著地視為出生地。
+* 56 意圖加害他人為詐偽之聲請者，處六月以下有期徒刑、拘役或三百元以下罰金。
 
-* 57 在船艦航行中出生者，船長或艦長應於二十四小時內，由船艦中選定證明人，依第五十一條所列事項，記載於航行日記簿，並記載證明人之姓名、職業及本籍。與證明人同行簽名。船艦到中國口岸時，船長或艦長應於二十四小時內，將關於出生之航行日記謄本，送交於其地之戶籍主任。船艦到外國口岸時，船長或艦長應於二十四小時內，將關於出生之航行日記謄本，送交所在國之中國使館或領事館，送經外交部轉咨內政部發交出生者之父母本籍地戶籍主任。
+* 57 人民對戶籍機關之處分，認為不當或違法者，得依法訴願。
 
-* 58 發見棄兒時，發見人或接發見報告之警察官署，應於二十四小時內，向發見地戶籍主任為出生登記之聲請。戶籍主任於接有前項聲請時，如棄兒無姓名者，應即為立姓命名，並將發見之年月日時、處所、附屬之衣服物件與棄兒之姓名、性別及推定出生之年月日，作成筆錄，添附於聲請書。前項棄兒，如有領受人或救濟機關者，應將領受人之姓名、職業、本籍住所及領受年月日或救濟機關之名稱處所及交付年月日一併作成筆錄。第三項之領受人或救濟機關有變更時，應由雙方關係人於十五日內，向原登記地戶籍主任呈報之。
+* 58 戶口普查，以內政部為主管機關。戶口普查法另定之。
 
-* 59 棄兒之父或母承領棄兒時，應於十五日內，依第五十一條之規定，為更正登記之聲請。
+* 59 外國人在中華民國境內寄留者，其查記辦法，由內政部會同外交部定之。
 
-* 60 出生子女未及聲請登記而死亡者，仍應為出生及死亡登記之聲請。前項規定，於棄兒準用之。
+* 60 本法施行細則，由內政部擬定，呈請行政院核定之。
 
-* 61 出生時無氣息者，為死產。凡死產應具死產登記聲請書聲請登記，並於聲請書內載明死產之原因。但因懷胎未滿六個月而流產者，不在此限。
+* 61 本法自公布日施行。
 
 * 62 非婚生子女認領登記之聲請，應由認領人自認領之日起一個月內，開具左列各款事項為之。一、子女之姓名、出生年月日時及出生地。二、父之職業及母之姓名、本籍。三、子女為家屬時，其家長之姓名、職業、本籍及其與子女之親屬關係。子女如係外國人時，除前項所列各款外，並應開具本人及其母之原國籍。
 
