陸海空軍刑法 1937.7.2

--- a/行政-國防/陸海空軍刑法.md
+++ b/行政-國防/陸海空軍刑法.md
@@ -1,6 +1,6 @@
 * 1 本法於陸、海、空軍軍人之犯罪者適用之。陸、海、空軍軍人除本法所列各罪外，有犯其他法律者，適用其他法律。
 
-* 2 雖非陸、海、空軍軍人，於戰地或戒嚴區域犯左列各罪者，亦適用本法：一、第十七條之罪。二、第十八條第二款、第四款、第五款及第七款之罪。三、第十九條第二款之罪四、第二十條之罪。五、第二十一條之罪。六、第六十八條至第七十二條之罪。七、第七十六條之罪。八、第七十七條第二項及第七十八條第二項之罪。九、第八十二條至第八十四條之罪。十、第九十一條、第九十二條之罪。十一、第一百零二條至第一百零五條之罪。十二、第一百零九條第一項之罪。十三、第一百十三條之罪。
+* 2 雖非陸、海、空軍軍人，於戰地或戒嚴區域犯左列各罪者，亦適用本法：一、第十七條之罪。二、第十八條第二款、第四款、第五款及第七款之罪。三、第十九條第二款之罪四、第二十條之罪。五、第二十一條之罪。六、第六十八條至第七十二條之罪。七、第七十六條之罪。八、第七十七條第二項及第七十八條第二項之罪。九、第八十二條至第八十四條之罪。十、第九十一條、第九十二條之罪。十一、第一百零二條至第一百零五條之罪。十二、第一百零九條第一項之罪。十三、第一百十六條之罪。
 
 * 3 陸、海、空軍軍人在民國領域外犯本法所列各罪者，仍適用本法；非陸、海、空軍軍人在民國領域外犯本法第二條各款之罪者亦同。
 
@@ -220,19 +220,25 @@
 
 * 111 兵艦發現敵船或盜船，不跟蹤追擊者，其長官處一年以上、七年以下有期徒刑。
 
-* 112 當商船擱淺、觸礁或被盜劫或有其他危險，兵艦無故不為救援者，其長官處五年以下有期徒刑。
+* 112 在警戒地域，遺失所保管之口令、信號、識別旗、陸海空軍聯絡符號、密碼電本、無線電呼號、無線電用各種代名詞者，處六月以上、三年以下有期徒刑。因而洩漏軍事上之機密者，處三年以上有期徒刑。
 
-* 113 機械人員錯安軍用舟、車、飛機機件，致乘駕人員陷於危險者，處三年以下有期徒刑；故意錯安機件或明知機件損壞匿不報告者，處十年以下有期徒刑；因而致人於死者，處死刑。
+* 113 在接戰地域，遺失前條所列各件者，處一年以下有期徒刑。因而洩漏軍事上之機密者，處三年以上有期徒刑。
 
-* 114 發禮砲、號砲或其他空砲時，裝填彈丸或瓦石者，處一年以下有期徒刑。
+* 114 於前二條情形，如證明已盡其不委棄於敵之方法而不能避免者，得減輕或免除其刑。遺失而不即具報者，不適用前項之規定。
 
-* 115 軍中或戒嚴地域，聞急呼之號報而不集合者，處三年以下有期徒刑。
+* 115 當商船擱淺、觸礁或被盜劫或有其他危險，兵艦無故不為救援者，其長官處五年以下有期徒刑。
 
-* 116 意圖違背服從之義務而結私黨或以圖書、演說誘惑他人者，處五年以下有期徒刑。
+* 116 機械人員錯安軍用舟、車、飛機機件，致乘駕人員陷於危險者，處三年以下有期徒刑；故意錯安機件或明知機件損壞匿不報告者，處十年以下有期徒刑；因而致人於死者，處死刑。
 
-* 117 違背職守而秘密結社、集會，處五年以下有期徒刑。
+* 117 發禮砲、號砲或其他空砲時，裝填彈丸或瓦石者，處一年以下有期徒刑。
 
-* 118 哨兵或衛兵無故發槍砲者，處三年以下有期徒刑。
+* 118 軍中或戒嚴地域，聞急呼之號報而不集合者，處三年以下有期徒刑。
 
-* 119 本法自公布日施行。
+* 119 意圖違背服從之義務而結私黨或以圖書、演說誘惑他人者，處五年以下有期徒刑。
+
+* 120 違背職守而秘密結社、集會，處五年以下有期徒刑。
+
+* 121 哨兵或衛兵無故發槍砲者，處三年以下有期徒刑。
+
+* 122 本法自公布日施行。
 
